LPS-166921 Build languages

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=ID de rol del lloc web actual
 current-step=Pas actual
 current-theme=Tema actual
 current-title=Títol actual
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=URL actual
 current-url-help=Representa la URL utilitzada per a fer la petició actual al portal.
 current-user=Usuari actual
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=Seleccioneu els rols que tindran els membres nous 
 default-template=Plantilla per defecte
 default-template-shorten=Plantilla per defecte (escurça)
 default-theme=Tema per defecte
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=Associacions dels usuaris per defecte
 default-user-password=Contrasenya d'usuari per defecte
 default-value=Valor per defecte
@@ -8816,34 +8818,48 @@ language.da=danès
 language.de=alemany
 language.el=grec
 language.en=anglès
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=espanyol
 language.es_AR=Espanyol (Argentina)
 language.es_CO=Espanyol (Colòmbia)
 language.es_MX=Espanyol (Mèxic)
 language.et=estonià
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=finlandès
 language.fr=francès
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=hindi
+language.hr=Croatian (Automatic Copy)
 language.ht=crioll haitià
 language.hu=hongarès
 language.in=indonesi
 language.it=italià
 language.iw=hebreu
 language.ja=japonès
+language.kk=Kazakh (Automatic Copy)
 language.ko=coreà
+language.lo=Lao (Automatic Copy)
 language.lt=lituà
 language.lv=letó
 language.ms=Malai
 language.mww=hmong daw
 language.nb=noruec
 language.nl=holandès
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=polonès
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=portuguès
 language.ro=romanès
 language.ru=rus
 language.sk=eslovac
 language.sl=eslovè
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=suec
+language.ta=Tamil (Automatic Copy)
 language.th=thai
 language.tr=turc
 language.uk=ucraïnès
@@ -10903,6 +10919,7 @@ not-staged=No té staging
 not-started=No s'ha iniciat
 not-supported=No suportat
 not-translated=No traduït
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=No visible
 not-x=No {0}?
 note=Nota
@@ -12570,6 +12587,7 @@ presentation-settings=Configuració de la presentació
 presets=Predefinicions
 press-enter-to-add-x-field=Premeu la tecla de retorn per afegir el camp {0}.
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=Premeu Retorn per triar aquest conjunt de camps o feu servir les tecles de fletxa per navegar pels conjunts de camps disponibles. Premeu Esc en qualsevol moment per tancar aquest diàleg.
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=Premeu Esc per suprimir els filtres de categoria de la barra.
 press-release=Premeu Allibera
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Premeu el botó de sota per obtenir la contrasenya d'un sol ús. S'enviarà a {0}.
@@ -17774,6 +17792,7 @@ transitions=Transicions
 translate=Tradueix
 translate-from=Tradueix de
 translated=Traduït
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=S'està traduint
 translating-web-content-to-x=S'està traduint el contingut web a {0}
 translation=Traductor
