--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=Aktuelle Rollen-IDs der Site
 current-step=Aktueller Schritt
 current-theme=Aktuelles Theme
 current-title=Aktueller Titel
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=Aktuelle URL
 current-url-help=Ist die URL, die für das aktuelle Request benutzt wurde.
 current-user=Aktueller Benutzer
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=Die neuen Sitemitgliedern standardmäßig zugewies
 default-template=Standardvorlage
 default-template-shorten=Standardvorlage (Kürzen)
 default-theme=Standardtheme
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=Standard-Benutzerzuordnungen
 default-user-password=Standard-Benutzerkennwort
 default-value=Standardwert
@@ -8816,34 +8818,48 @@ language.da=Dänisch
 language.de=Deutsch
 language.el=Griechisch
 language.en=Englisch
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=Spanisch
 language.es_AR=Spanisch (Argentinien)
 language.es_CO=Spanisch (Kolumbien)
 language.es_MX=Spanisch (Mexiko)
 language.et=Estnisch
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=Finnisch
 language.fr=Französisch
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=Hindu
+language.hr=Croatian (Automatic Copy)
 language.ht=Kreolisch (Haiti)
 language.hu=Ungarisch
 language.in=Indonesisch
 language.it=Italienisch
 language.iw=Hebräisch
 language.ja=Japanisch
+language.kk=Kazakh (Automatic Copy)
 language.ko=Koreanisch
+language.lo=Lao (Automatic Copy)
 language.lt=Litauisch
 language.lv=Lettisch
 language.ms=Malaiisch
 language.mww=Hmong
 language.nb=Norwegisch
 language.nl=Niederländisch/Holländisch
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=Polnisch
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=Portugisisch
 language.ro=Rumänisch
 language.ru=Russisch
 language.sk=Slovakisch
 language.sl=Slowenisch
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=Schwedisch
+language.ta=Tamil (Automatic Copy)
 language.th=Thailändisch
 language.tr=Türkisch
 language.uk=Ukrainisch
@@ -10903,6 +10919,7 @@ not-staged=Kein Staginginhalt
 not-started=Nicht gestartet
 not-supported=Nicht unterstützt
 not-translated=Nicht übersetzt
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=Nicht sichtbar
 not-x=Nicht {0}?
 note=Notiz
@@ -12570,6 +12587,7 @@ presentation-settings=Darstellungsoptionen
 presets=Voreinstellungen
 press-enter-to-add-x-field=Drücken Sie die Eingabetaste, um das Feld {0} hinzuzufügen.
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=Drücken Sie die Eingabetaste, um diesen Feldsatz auszuwählen, oder verwenden Sie die Pfeiltasten, um durch die verfügbaren Feldsätze zu navigieren. Drücken Sie jederzeit die Esc-Taste, um diesen Dialog zu schließen.
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=Drücken Sie die Esc-Taste, um die Kategorienfilter der Leiste zu entfernen.
 press-release=Pressemitteilung
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Klicken Sie unten auf die Schaltfläche, um Ihr Einmalkennwort zu erhalten. Es wird gesendet an {0}.
@@ -17774,6 +17792,7 @@ transitions=Übergänge
 translate=Übersetzen
 translate-from=Übertragen von
 translated=Übersetzt
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=Übersetzen
 translating-web-content-to-x=Webcontent wird nach {0} übersetzt
 translation=Übersetzer
