--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_AR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_AR.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=Identificadores de roles del sitio actual
 current-step=Paso actual
 current-theme=Tema actual
 current-title=Título actual
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=URL actual
 current-url-help=Representa la URL utilizada para hacer la petición actual.
 current-user=Usuario actual
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=Selecciona los equipos a los que pertenecerán los
 default-template=Plantilla por defecto
 default-template-shorten=Plantilla por defecto (acortada)
 default-theme=Tema por defecto
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=Asociaciones por defecto de los usuarios
 default-user-password=Contraseña por defecto de usuario
 default-value=Valor por defecto
@@ -8816,34 +8818,48 @@ language.da=Danés
 language.de=Alemán
 language.el=Griego
 language.en=Inglés
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=Español
 language.es_AR=Spanish (Argentina) (Automatic Copy)
 language.es_CO=Spanish (Colombia) (Automatic Copy)
 language.es_MX=Spanish (Mexico) (Automatic Copy)
 language.et=Estonio
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=Finlandés
 language.fr=Francés
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=Hindi
+language.hr=Croatian (Automatic Copy)
 language.ht=Criollo haitiano
 language.hu=Húngaro
 language.in=Indonesio
 language.it=Italiano
 language.iw=Hebreo
 language.ja=Japonés
+language.kk=Kazakh (Automatic Copy)
 language.ko=Coreano
+language.lo=Lao (Automatic Copy)
 language.lt=Lituano
 language.lv=Letón
 language.ms=Malayo
 language.mww=Hmong Daw
 language.nb=Noruego
 language.nl=Holandés
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=Polaco
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=Portugués
 language.ro=Rumano
 language.ru=Ruso
 language.sk=Eslovaco
 language.sl=Esloveno
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=Sueco
+language.ta=Tamil (Automatic Copy)
 language.th=Tailandés
 language.tr=Turco
 language.uk=Ucraniano
@@ -10903,6 +10919,7 @@ not-staged=No escalonado
 not-started=No iniciado
 not-supported=No soportado
 not-translated=No traducido
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=No visible
 not-x=¿No es {0}?
 note=Nota
@@ -12570,6 +12587,7 @@ presentation-settings=Configuración de la presentación
 presets=Preestablecidos
 press-enter-to-add-x-field=Press enter to add {0} field. (Automatic Copy)
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=Presione Entrar para seleccionar este conjunto de campos, o bien pulse las teclas de dirección para desplazarse por los conjuntos de campos disponibles. Presione Escape en cualquier momento para cerrar este cuadro de diálogo.
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=Presione Escape para quitar los filtros de categoría de la barra.
 press-release=Nota de prensa
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Pulse el botón siguiente para obtener la contraseña de un solo uso. Se enviará a {0}.
@@ -17774,6 +17792,7 @@ transitions=Transiciones
 translate=Traducir
 translate-from=Traducir de
 translated=Traducido
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=Traduciendo
 translating-web-content-to-x=Traducir contenido web a {0}
 translation=Traductor
