--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=Current Site Role IDs (Automatic Copy)
 current-step=Praegune samm (Automatic Translation)
 current-theme=Aktiivne teema
 current-title=Praegune pealkiri
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=Aktiivne kasutaja
 current-url-help=Tähistab URL-i, mida kasutati portaali praeguse taotluse tegemiseks. (Automatic Translation)
 current-user=Aktiivne kasutaja
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=Valige meeskonnad, mille liige vastloodud saidi li
 default-template=Vaikemall (Automatic Translation)
 default-template-shorten=Vaikemall (lühendamine) (Automatic Translation)
 default-theme=Vaikekujundus (Automatic Translation)
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=Vaikimisi kasutajaseosed
 default-user-password=Kasutaja vaikeparool (Automatic Translation)
 default-value=Vaikeväärtus
@@ -8814,34 +8816,48 @@ language.da=Taani
 language.de=Saksa
 language.el=Kreeka
 language.en=Inglise
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=Hispaania
 language.es_AR=Spanish (Argentina) (Automatic Copy)
 language.es_CO=Spanish (Colombia) (Automatic Copy)
 language.es_MX=Spanish (Mexico) (Automatic Copy)
 language.et=Eesti
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=Soome
 language.fr=Prantsuse
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=Hindi
+language.hr=Croatian (Automatic Copy)
 language.ht=Haiti kreooli
 language.hu=Ungari
 language.in=Indoneesia
 language.it=Itaalia
 language.iw=Heebrea
 language.ja=Jaapani
+language.kk=Kazakh (Automatic Copy)
 language.ko=Korea
+language.lo=Lao (Automatic Copy)
 language.lt=Leedu
 language.lv=Läti
 language.ms=Malai
 language.mww=Hispaania
 language.nb=Norra
 language.nl=Holland
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=Poola
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=Portugali
 language.ro=Rumeenia
 language.ru=Vene
 language.sk=Slovakkia
 language.sl=Slovakkia
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=Rootsi
+language.ta=Tamil (Automatic Copy)
 language.th=Tai
 language.tr=Türgi
 language.uk=Ukraina
@@ -10901,6 +10917,7 @@ not-staged=Pole lavastatud (Automatic Translation)
 not-started=Pole alustatud (Automatic Translation)
 not-supported=Ei toetata
 not-translated=Pole tõlgitud (Automatic Translation)
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=Pole nähtav (Automatic Translation)
 not-x=Not {0}? (Automatic Copy)
 note=Märge
@@ -12568,6 +12585,7 @@ presentation-settings=Esitlusseaded
 presets=Presets (Automatic Translation)
 press-enter-to-add-x-field=Press enter to add {0} field. (Automatic Copy)
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=Press enter to choose this field set or use arrow keys to navigate through the available field sets. Press escape at any time to close this dialog. (Automatic Copy)
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=Riba kategooriafiltrite eemaldamiseks vajutage paoklahvi (Escape). (Automatic Translation)
 press-release=Pressiteade
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Press the button below to obtain your one-time password. It will be sent to {0}. (Automatic Copy)
@@ -17772,6 +17790,7 @@ transitions=Üleminekud (Automatic Translation)
 translate=Tõlgi
 translate-from=Tõlgi alates (Automatic Translation)
 translated=Tõlgitud (Automatic Translation)
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=Tõlkimine (Automatic Translation)
 translating-web-content-to-x=Translating Web Content to {0} (Automatic Copy)
 translation=Tõlkija
