--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=Current Site Role IDs (Automatic Copy)
 current-step=گام کنونی (Automatic Translation)
 current-theme=تم فعلی
 current-title=عنوان فعلی
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=آدرس جاری
 current-url-help=URLهایی که برای درخواست جاری پرتال استفاده شده، نشان داده شده‌اند.
 current-user=کاربر جاری
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=انتخاب نقش‌هایی که به عضو ت
 default-template=قالب پیش‌فرض
 default-template-shorten=قالب پیش فرض (کوتاه کردن) (Automatic Translation)
 default-theme=تم پیش‌فرض
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=انتصاب‌های پیش‌فرض کاربر
 default-user-password=کلمه عبور پیش فرض
 default-value=مقدار پیش‌فرض
@@ -8814,34 +8816,48 @@ language.da=دانمارکی
 language.de=آلمانی
 language.el=یونانی
 language.en=انگليسی
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=اسپانيايی
 language.es_AR=Spanish (Argentina) (Automatic Copy)
 language.es_CO=Spanish (Colombia) (Automatic Copy)
 language.es_MX=Spanish (Mexico) (Automatic Copy)
 language.et=زبان استونی
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=فنلاندی
 language.fr=فرانسوی
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=هندی
+language.hr=Croatian (Automatic Copy)
 language.ht=هائیتی کریول
 language.hu=مجارستانی
 language.in=اندونزیایی
 language.it=ايتاليايی
 language.iw=عبری
 language.ja=ژاپنی
+language.kk=Kazakh (Automatic Copy)
 language.ko=کره ای
+language.lo=Lao (Automatic Copy)
 language.lt=زبان لیتوانی
 language.lv=لتونی
 language.ms=مالایی
 language.mww=همونگ ادم کند و تنبل
 language.nb=نروژی
 language.nl=هلندی
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=لهستانی
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=پرتغالی
 language.ro=رمانيايی
 language.ru=روسی
 language.sk=اسلواک
 language.sl=اسلواک
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=سوئدی
+language.ta=Tamil (Automatic Copy)
 language.th=تایلندی
 language.tr=ترکی
 language.uk=اکراينی
@@ -10901,6 +10917,7 @@ not-staged=طبقه‌بندی نشده است
 not-started=آغاز نشده (Automatic Translation)
 not-supported=پشتیبانی نشده
 not-translated=ترجمه نشده
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=قابل مشاهده نیست
 not-x=نه {0}?
 note=توضیحات
@@ -12568,6 +12585,7 @@ presentation-settings=تنظیمات نمایش
 presets=راه‌اندازی مجدد
 press-enter-to-add-x-field=Press enter to add {0} field. (Automatic Copy)
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=مطبوعات را وارد کنید برای انتخاب این مجموعه زمینه و یا استفاده از کلیدهای جهت دار به حرکت را از طریق مجموعه های زمینه در دسترس است. مطبوعات فرار در هر زمان برای بستن این گفتگو. (Automatic Translation)
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=برای حذف فیلترهای دسته نوار، فرار را فشار دهید. (Automatic Translation)
 press-release=خروجی خبری
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Press the button below to obtain your one-time password. It will be sent to {0}. (Automatic Copy)
@@ -17772,6 +17790,7 @@ transitions=انتقال (Automatic Translation)
 translate=ترجمه
 translate-from=ترجمه از (Automatic Translation)
 translated=ترجمه شده
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=ترجمه کردن
 translating-web-content-to-x=ترجمه‌ی محتوای سایت به {0}
 translation=ترجمه
