--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=ID des rôles de site actuel
 current-step=Étape en cours
 current-theme=Thème courant
 current-title=Titre courant
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=URL actuelle
 current-url-help=Représente l'URL qui a été utilisée pour la requête vers le portail.
 current-user=Utilisateur courant
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=Sélectionner les rôles que les nouveaux membres 
 default-template=Modèle par défaut
 default-template-shorten=Modèle par défaut (abrégé)
 default-theme=Thème par défaut
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=Associations d'utilisateur par défaut
 default-user-password=Mot de passe utilisateur par défaut
 default-value=Valeur par défaut
@@ -8816,34 +8818,48 @@ language.da=Danois
 language.de=Allemand
 language.el=Grec
 language.en=Anglais
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=Espagnol
 language.es_AR=Espagnol (Argentine)
 language.es_CO=Espagnol (Colombie)
 language.es_MX=Espagnol (Mexique)
 language.et=Estonien
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=Finnois
 language.fr=Français
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=Hindi
+language.hr=Croatian (Automatic Copy)
 language.ht=Haïtien
 language.hu=Hongrois
 language.in=Indonésien
 language.it=Italien
 language.iw=Hébreu
 language.ja=Japonais
+language.kk=Kazakh (Automatic Copy)
 language.ko=Coréen
+language.lo=Lao (Automatic Copy)
 language.lt=Lituanien
 language.lv=Letton
 language.ms=Malaisien
 language.mww=Hmong du Laos
 language.nb=Norvégien
 language.nl=Hollandais
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=Polonais
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=Portugais
 language.ro=Roumain
 language.ru=Russe
 language.sk=Slovaque
 language.sl=Slovène
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=Suédois
+language.ta=Tamil (Automatic Copy)
 language.th=Thaï
 language.tr=Turc
 language.uk=Ukrainien
@@ -10903,6 +10919,7 @@ not-staged=pas monté (staging)
 not-started=Pas commencé
 not-supported=Pas supporté
 not-translated=Non traduit
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=Pas visible
 not-x=Pas {0} ?
 note=Note
@@ -12570,6 +12587,7 @@ presentation-settings=Paramètres de présentation
 presets=Pré-définis
 press-enter-to-add-x-field=Appuyez sur Entrée pour ajouter le champ {0}.
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=Appuyez sur Entrée pour choisir ce jeu de champs ou utilisez les touches fléchées pour parcourir les jeux de champs disponibles. Appuyez sur Echap à tout moment pour fermer cette boîte de dialogue.
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=Appuyez sur Echap pour supprimer les filtres de catégorie de la barre.
 press-release=Communiqué De Presse
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Appuyez sur le bouton ci-dessous pour obtenir votre mot de passe à usage unique. Il sera envoyé à {0}.
@@ -17774,6 +17792,7 @@ transitions=Transitions
 translate=Traduire
 translate-from=Traduire de
 translated=Traduit
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=Traduction en cours
 translating-web-content-to-x=Traduction de contenu web vers {0}
 translation=Traducteur
