--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hr.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=Current Site Role IDs (Automatic Copy)
 current-step=Current Step (Automatic Copy)
 current-theme=Trenutna tema
 current-title=Trenutni naslov
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=Trenutni URL
 current-url-help=Predstavlja URL korišten za slanje trenutnog zahtjeva prema portalu.
 current-user=Trenutni korisnik
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=Izaberite uloge koje će novo priključeni site č
 default-template=Default Template (Automatic Copy)
 default-template-shorten=Default Template (Shorten) (Automatic Copy)
 default-theme=Zadana tema
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=Zadane korisničke udruge
 default-user-password=Default User Password (Automatic Copy)
 default-value=Zadana vrijednost
@@ -8814,34 +8816,48 @@ language.da=Danski
 language.de=Njemački
 language.el=Grčki
 language.en=Engleski
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=Španjolski
 language.es_AR=Spanish (Argentina) (Automatic Copy)
 language.es_CO=Spanish (Colombia) (Automatic Copy)
 language.es_MX=Spanish (Mexico) (Automatic Copy)
 language.et=Estonski
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=Finski
 language.fr=Francuski
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=Hindi (Automatic Copy)
+language.hr=Croatian (Automatic Copy)
 language.ht=Haitian Creole (Automatic Copy)
 language.hu=Mađarski
 language.in=Indonezijski
 language.it=Talijanski
 language.iw=Hebrejski
 language.ja=Japanski
+language.kk=Kazakh (Automatic Copy)
 language.ko=Korejski
+language.lo=Lao (Automatic Copy)
 language.lt=Litavski
 language.lv=Latvijski
 language.ms=Malay (Automatic Copy)
 language.mww=Hmong Daw (Automatic Copy)
 language.nb=Norveški
 language.nl=Nizozemski
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=Poljski
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=Portugalski
 language.ro=Rumunjski
 language.ru=Ruski
 language.sk=Slovački
 language.sl=Slovenski
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=Švedski
+language.ta=Tamil (Automatic Copy)
 language.th=Tajlandski
 language.tr=Turski
 language.uk=Ukrajinski
@@ -10901,6 +10917,7 @@ not-staged=Not Staged (Automatic Copy)
 not-started=Not Started (Automatic Copy)
 not-supported=Nije podržano
 not-translated=Not Translated (Automatic Copy)
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=Not Visible (Automatic Copy)
 not-x=Not {0}? (Automatic Copy)
 note=Bilješka
@@ -12568,6 +12585,7 @@ presentation-settings=Postavke prezentacije
 presets=Unaprijed postavljeno
 press-enter-to-add-x-field=Press enter to add {0} field. (Automatic Copy)
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=Press enter to choose this field set or use arrow keys to navigate through the available field sets. Press escape at any time to close this dialog. (Automatic Copy)
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=Press escape to remove the bar's category filters. (Automatic Copy)
 press-release=Novinska obavijest
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Press the button below to obtain your one-time password. It will be sent to {0}. (Automatic Copy)
@@ -17772,6 +17790,7 @@ transitions=Transitions (Automatic Copy)
 translate=Prevedi
 translate-from=Translate From (Automatic Copy)
 translated=Translated (Automatic Copy)
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=Translating (Automatic Copy)
 translating-web-content-to-x=Prevođenje web sadržaja za {0}
 translation=Prevoditelj
