--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=Aktuális webhely szerepkörazonosító
 current-step=Aktuális lépés
 current-theme=Jelenlegi téma
 current-title=Jelenlegi cím
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=Jelenlegi URL
 current-url-help=Képviseli az URL-t, ami arra volt használva, hogy létrehozza az aktuális kérést a portálhoz.
 current-user=Jelenlegi felhasználó
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=Válassza ki a szerepeket, amikkel az újonnan hoz
 default-template=Alapértelmezett sablon
 default-template-shorten=Alapértelmezett sablon (rövidíteni)
 default-theme=Alapértelmezett téma
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=Alapértelmezett felhasználói társítások
 default-user-password=Alapértelmezett felhasználói jelszó
 default-value=Alapértelmezett érték
@@ -8817,34 +8819,48 @@ language.da=Dán
 language.de=Német
 language.el=Görög
 language.en=Angol
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=Spanyol
 language.es_AR=Spanyol (Argentina)
 language.es_CO=Spanish (Kolumbia)
 language.es_MX=Spanyol (Mexikó)
 language.et=Észt
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=Finn
 language.fr=Francia
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=Hindi
+language.hr=Croatian (Automatic Copy)
 language.ht=Haiti kreol
 language.hu=Magyar
 language.in=Indonéz
 language.it=Olasz
 language.iw=Héber
 language.ja=Japán
+language.kk=Kazakh (Automatic Copy)
 language.ko=Koreai
+language.lo=Lao (Automatic Copy)
 language.lt=Litván
 language.lv=Lett
 language.ms=maláj
 language.mww=Hmong Daw
 language.nb=Norvég
 language.nl=Holland
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=Lengyel
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=Portugál
 language.ro=Román
 language.ru=Orosz
 language.sk=Szlovák
 language.sl=Szlovén
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=Svéd
+language.ta=Tamil (Automatic Copy)
 language.th=Tháj
 language.tr=Török
 language.uk=Ukrán
@@ -10904,6 +10920,7 @@ not-staged=Nem stage-elt
 not-started=Nem kezdődött meg
 not-supported=Nem támogatott
 not-translated=Nincs lefordítva
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=Nem látható
 not-x=Nem {0}?
 note=Megjegyzés
@@ -12571,6 +12588,7 @@ presentation-settings=Megjelenítési beállítások
 presets=Készletek
 press-enter-to-add-x-field=Az Enter megnyomásával adja hozzá a {0} mezőt.
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=Az Enter megnyomásával válassza ki ezt a mezőhalmazt, vagy a nyílbillentyűk segítségével navigáljon a rendelkezésre álló mezőhalmazok között. A párbeszédablakot bármikor becsukhatja az Esc billentyűvel.
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=A sáv kategóriaszűrőinek eltávolításához nyomja meg az Esc billentyűt.
 press-release=Sajtóanyag
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Az alábbi gombra kattintva kérheti az egyszeri jelszót, amelyet ide fogunk küldeni: {0}.
@@ -17775,6 +17793,7 @@ transitions=Átmenetek
 translate=Fordítás
 translate-from=Fordítás forrása
 translated=Lefordítva
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=Fordítás folyamatban
 translating-web-content-to-x=Webtartalom fordítása erre: {0}
 translation=Fordítás
