--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=Current Site Role IDs (Automatic Copy)
 current-step=Langkah Saat Ini (Automatic Translation)
 current-theme=Tema saat ini
 current-title=Judul saat ini
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=Pengguna saat ini
 current-url-help=Mewakili URL yang digunakan untuk membuat permintaan saat ini ke portal. (Automatic Translation)
 current-user=Pengguna saat ini
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=Pilih tim tempat anggota situs yang baru ditetapka
 default-template=Templat Default (Automatic Translation)
 default-template-shorten=Templat Default (Memperpendek) (Automatic Translation)
 default-theme=Tema Asali (Automatic Translation)
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=Default Default Asosiasi Pengguna
 default-user-password=Kata Sandi Pengguna Asali (Automatic Translation)
 default-value=Nilai Default
@@ -8814,34 +8816,48 @@ language.da=Denmark
 language.de=Jerman
 language.el=Yunani
 language.en=Bahasa Inggris
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=Bahasa Spanyol
 language.es_AR=Spanish (Argentina) (Automatic Copy)
 language.es_CO=Spanish (Colombia) (Automatic Copy)
 language.es_MX=Spanish (Mexico) (Automatic Copy)
 language.et=Estonia
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=Finlandia
 language.fr=Bahasa Perancis
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=Hindi
+language.hr=Croatian (Automatic Copy)
 language.ht=Kreol Haiti
 language.hu=Hungaria
 language.in=Indonesia
 language.it=Bahasa Italia
 language.iw=Ibrani
 language.ja=Jepang
+language.kk=Kazakh (Automatic Copy)
 language.ko=Bahasa Korea
+language.lo=Lao (Automatic Copy)
 language.lt=Lithuania
 language.lv=Latvia
 language.ms=Melayu
 language.mww=Hmong Daw
 language.nb=Norwegia
 language.nl=Belanda
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=Polandia
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=Bahasa Portugis
 language.ro=Romania
 language.ru=Rusia
 language.sk=slovak
 language.sl=Slovenia
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=Swedia
+language.ta=Tamil (Automatic Copy)
 language.th=Thai
 language.tr=Turki
 language.uk=Ukrainia
@@ -10901,6 +10917,7 @@ not-staged=Tidak Dipentaskan (Automatic Translation)
 not-started=Belum Dimulai (Automatic Translation)
 not-supported=Tidak Didukung
 not-translated=Tidak Diterjemahkan (Automatic Translation)
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=Tidak Terlihat (Automatic Translation)
 not-x=Not {0}? (Automatic Copy)
 note=Catatan
@@ -12568,6 +12585,7 @@ presentation-settings=Pengaturan Presentasi
 presets=Preset
 press-enter-to-add-x-field=Press enter to add {0} field. (Automatic Copy)
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=Press enter to choose this field set or use arrow keys to navigate through the available field sets. Press escape at any time to close this dialog. (Automatic Copy)
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=Tekan escape untuk menghapus filter kategori bar. (Automatic Translation)
 press-release=Berita untuk surat kabar
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Press the button below to obtain your one-time password. It will be sent to {0}. (Automatic Copy)
@@ -17772,6 +17790,7 @@ transitions=Transisi (Automatic Translation)
 translate=Menerjemahkan
 translate-from=Diterjemahkan Dari (Automatic Translation)
 translated=Diterjemahkan (Automatic Translation)
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=Menerjemahkan (Automatic Translation)
 translating-web-content-to-x=Translating Web Content to {0} (Automatic Copy)
 translation=Penerjemah
