--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -4633,6 +4633,7 @@ current-site-role-ids=ID del Ruolo del Sito Corrente
 current-step=Passaggio corrente (Automatic Translation)
 current-theme=Tema Corrente
 current-title=Titolo Corrente
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=Indirizzo Corrente
 current-url-help=Rappresenta l'URL usato per fare la richiesta corrente al portale.
 current-user=Utente Corrente
@@ -4966,6 +4967,7 @@ default-teams-assignment-help=Seleziona i ruoli che avranno i nuovi membri asseg
 default-template=Modello predefinito (Automatic Translation)
 default-template-shorten=Modello predefinito (accorcia) (Automatic Translation)
 default-theme=Tema di Default
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=Associazioni Utente Predefinite
 default-user-password=Password utente predefinita (Automatic Translation)
 default-value=Valore predefinito
@@ -8815,34 +8817,48 @@ language.da=Danese
 language.de=Tedesco
 language.el=Greco
 language.en=Inglese
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=Spagnolo
 language.es_AR=Spanish (Argentina) (Automatic Copy)
 language.es_CO=Spanish (Colombia) (Automatic Copy)
 language.es_MX=Spanish (Mexico) (Automatic Copy)
 language.et=Estone
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=Finnico
 language.fr=Francese
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=Indi
+language.hr=Croatian (Automatic Copy)
 language.ht=Creolo Haitiano
 language.hu=Ungherese
 language.in=Indonesiano
 language.it=Italiano
 language.iw=Ebraico
 language.ja=Giapponese
+language.kk=Kazakh (Automatic Copy)
 language.ko=Coreano
+language.lo=Lao (Automatic Copy)
 language.lt=Lituano
 language.lv=Lettone
 language.ms=Malese
 language.mww=Hmong Daw
 language.nb=Norvegese
 language.nl=Olandese
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=Polacco
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=Portoghese
 language.ro=Rumeno
 language.ru=Russo
 language.sk=Slovacco
 language.sl=Sloveno
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=Svedese
+language.ta=Tamil (Automatic Copy)
 language.th=Thailandese
 language.tr=Turco
 language.uk=Ucraino
@@ -10902,6 +10918,7 @@ not-staged=Non in staging
 not-started=Non avviato (Automatic Translation)
 not-supported=Non Supportato
 not-translated=Non tradotto (Automatic Translation)
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=Non Visibile
 not-x=Not {0}? (Automatic Copy)
 note=Nota
@@ -12569,6 +12586,7 @@ presentation-settings=Impostazioni di Presentazione
 presets=Preimpostazioni
 press-enter-to-add-x-field=Press enter to add {0} field. (Automatic Copy)
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=Press enter to choose this field set or use arrow keys to navigate through the available field sets. Press escape at any time to close this dialog. (Automatic Copy)
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=Premere ESC per rimuovere i filtri di categoria della barra. (Automatic Translation)
 press-release=Comunicato Stampa
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Press the button below to obtain your one-time password. It will be sent to {0}. (Automatic Copy)
@@ -17773,6 +17791,7 @@ transitions=Transizioni (Automatic Translation)
 translate=Traduci
 translate-from=Traduci da (Automatic Translation)
 translated=Tradotto
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=Traduzione in corso (Automatic Translation)
 translating-web-content-to-x=Traduzione del Contenuto Web a {0}
 translation=Traduttore
