--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=Current Site Role IDs (Automatic Copy)
 current-step=שלב נוכחי (Automatic Translation)
 current-theme=ערכת נושא נוכחית
 current-title=כותרת נוכחית
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=משתמש נוכחי
 current-url-help=מייצג את כתובת האתר בו נעשה שימוש לצורך הגשת הבקשה הנוכחית לפורטל.
 current-user=משתמש נוכחי
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=בחר את הצוותים שאליהם משתיי
 default-template=תבנית ברירת המחדל
 default-template-shorten=תבנית ברירת מחדל (קיצור) (Automatic Translation)
 default-theme=ברירת מחדל של נושא
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=קישורי משתמשים לפי ברירת מחדל
 default-user-password=סיסמת משתמש המהווה ברירת מחדל
 default-value=ערכים לפי ברירת מחדל
@@ -8814,34 +8816,48 @@ language.da=דנית
 language.de=גרמנית
 language.el=יוונית
 language.en=אנגלית
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=ספרדית
 language.es_AR=Spanish (Argentina) (Automatic Copy)
 language.es_CO=Spanish (Colombia) (Automatic Copy)
 language.es_MX=Spanish (Mexico) (Automatic Copy)
 language.et=אסטונית
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=פינית
 language.fr=צרפתית
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=הינדית
+language.hr=Croatian (Automatic Copy)
 language.ht=קריאולית האיטית
 language.hu=הונגרית
 language.in=אינדונזית
 language.it=איטלקית
 language.iw=עברית
 language.ja=יפנית
+language.kk=Kazakh (Automatic Copy)
 language.ko=קוריאנית
+language.lo=Lao (Automatic Copy)
 language.lt=ליטאית
 language.lv=לטבית
 language.ms=מלאית
 language.mww=המונג דאו
 language.nb=נורבגי
 language.nl=הולנדי
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=פולנית
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=פורטוגלית
 language.ro=רומנית
 language.ru=רוסית
 language.sk=סלובקי
 language.sl=סלובנית
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=שוודית
+language.ta=Tamil (Automatic Copy)
 language.th=תאית
 language.tr=טורקית
 language.uk=אוקראינית
@@ -10901,6 +10917,7 @@ not-staged=לא הועלה ל-Staging
 not-started=לא הופעל (Automatic Translation)
 not-supported=לא נתמך
 not-translated=לא תורגם (Automatic Translation)
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=לא גלוי
 not-x=Not {0}? (Automatic Copy)
 note=הערה
@@ -12568,6 +12585,7 @@ presentation-settings=הגדרות הפרזנטציה
 presets=הגדרות קבועות מראש
 press-enter-to-add-x-field=Press enter to add {0} field. (Automatic Copy)
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=הקש enter כדי לבחור ערכת שדות זו או השתמש במקשי החצים כדי לנווט בין ערכות השדות הזמינות. לחץ על Escape בכל עת כדי לסגור תיבת דו-שיח זו. (Automatic Translation)
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=הקש escape כדי להסיר את מסנני הקטגוריות של הסרגל. (Automatic Translation)
 press-release=הודעה לעיתונות
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Press the button below to obtain your one-time password. It will be sent to {0}. (Automatic Copy)
@@ -17772,6 +17790,7 @@ transitions=מעברים (Automatic Translation)
 translate=לתרגם
 translate-from=תרגם מ (Automatic Translation)
 translated=תורגם
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=תרגום (Automatic Translation)
 translating-web-content-to-x=תרגום תוכן אינטרנטי ל {0}
 translation=מתרגם
