--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=Current Site Role IDs (Automatic Copy)
 current-step=Gjeldende trinn (Automatic Translation)
 current-theme=Nåværende utseendemal
 current-title=Nåværende tittel
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=Gjeldende URL
 current-url-help=Representerer URL-en for gjeldende spørring mot portalen.
 current-user=Nåværende bruker
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=Velg rollen som nylig tilegnede nettstedsmedlemmer
 default-template=Standard mal
 default-template-shorten=Standard mal (forkortet)
 default-theme=Forvalgt utseendemal
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=Bruk standardtilhørighet
 default-user-password=Standard brukerpassord (Automatic Translation)
 default-value=Standardverdi
@@ -8814,34 +8816,48 @@ language.da=Dansk
 language.de=Tysk
 language.el=Gresk
 language.en=Engelsk
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=Spansk
 language.es_AR=Spanish (Argentina) (Automatic Copy)
 language.es_CO=Spanish (Colombia) (Automatic Copy)
 language.es_MX=Spanish (Mexico) (Automatic Copy)
 language.et=Estisk
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=Finsk
 language.fr=Fransk
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=Hindi
+language.hr=Croatian (Automatic Copy)
 language.ht=Haitisk Kreol
 language.hu=Ungarsk
 language.in=Indonesisk
 language.it=Italiensk
 language.iw=Hebraisk
 language.ja=Japansk
+language.kk=Kazakh (Automatic Copy)
 language.ko=Koreansk
+language.lo=Lao (Automatic Copy)
 language.lt=Litauisk
 language.lv=Latvisk
 language.ms=Malayisk
 language.mww=Hmong Daw
 language.nb=Norsk
 language.nl=Nederlandsk
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=Polsk
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=Portugisisk
 language.ro=Rumensk
 language.ru=Russisk
 language.sk=Slovakisk
 language.sl=Slovensk
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=Svensk
+language.ta=Tamil (Automatic Copy)
 language.th=Thai
 language.tr=Tyrkisk
 language.uk=Ukrainsk
@@ -10901,6 +10917,7 @@ not-staged=Ikke iscenesatt (Automatic Translation)
 not-started=Ikke startet (Automatic Translation)
 not-supported=Ikke støttet
 not-translated=Ikke oversatt
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=Ikke synlig (Automatic Translation)
 not-x=Ikke {0}?
 note=Notat
@@ -12568,6 +12585,7 @@ presentation-settings=Presentasjonsinnstillinger
 presets=Forhåndsinnstillinger
 press-enter-to-add-x-field=Press enter to add {0} field. (Automatic Copy)
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=Press enter to choose this field set or use arrow keys to navigate through the available field sets. Press escape at any time to close this dialog. (Automatic Copy)
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=Trykk esc for å fjerne linjens kategorifiltre. (Automatic Translation)
 press-release=Pressemelding
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Press the button below to obtain your one-time password. It will be sent to {0}. (Automatic Copy)
@@ -17772,6 +17790,7 @@ transitions=Overganger (Automatic Translation)
 translate=Oversette
 translate-from=Oversett fra (Automatic Translation)
 translated=Oversatt (Automatic Translation)
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=Oversetter
 translating-web-content-to-x=Oversetter web-innhold til {0}
 translation=Oversetter
