--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=Huidige siterol-ID's
 current-step=Huidige stap
 current-theme=Huidige opmaakset
 current-title=Huidige titel
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=Huidige URL
 current-url-help=Vertegenwoordigt de URL die is gebruikt om het huidige verzoek te doen.
 current-user=Huidige gebruiker
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=Selecteer de rollen die de nieuwe siteleden krijge
 default-template=Standaardsjabloon
 default-template-shorten=Standaardsjabloon (afkorten)
 default-theme=Standaardthema
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=Standaardgebruikerskoppelingen
 default-user-password=Standaard gebruikerswachtwoord
 default-value=Standaardwaarde
@@ -8817,34 +8819,48 @@ language.da=Deens
 language.de=Duits
 language.el=Grieks
 language.en=Engels
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=Spaans
 language.es_AR=Spaans (Argentinië)
 language.es_CO=Spaans (Colombia)
 language.es_MX=Spaans (Mexico)
 language.et=Estisch
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=Fins
 language.fr=Frans
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=Hindi
+language.hr=Croatian (Automatic Copy)
 language.ht=Haïtiaans
 language.hu=Hongaars
 language.in=Indonesisch
 language.it=Italiaans
 language.iw=Hebreeuws
 language.ja=Japans
+language.kk=Kazakh (Automatic Copy)
 language.ko=Koreaans
+language.lo=Lao (Automatic Copy)
 language.lt=Litouws
 language.lv=Lets
 language.ms=Maleis
 language.mww=Hmong Daw
 language.nb=Noors
 language.nl=Nederlands
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=Pools
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=Portugees
 language.ro=Roemeens
 language.ru=Russisch
 language.sk=Slowaaks
 language.sl=Sloveens
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=Zweeds
+language.ta=Tamil (Automatic Copy)
 language.th=Thais
 language.tr=Turks
 language.uk=Oekraïens
@@ -10904,6 +10920,7 @@ not-staged=Niet gefaseerd
 not-started=Niet begonnen
 not-supported=Niet ondersteund
 not-translated=Niet vertaald
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=Niet zichtbaar
 not-x=Niet {0}?
 note=Notitie
@@ -12571,6 +12588,7 @@ presentation-settings=Presentatie-instellingen
 presets=Voorinstellingen
 press-enter-to-add-x-field=Druk op Enter om het veld {0} toe te voegen.
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=Druk op enter om deze veldenset te kiezen of gebruik de pijltoetsen om door de beschikbare veldensets te navigeren. Druk op Escape om dit dialoogvenster te sluiten.
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=Druk op Escape om de categoriefilters van de balk te verwijderen.
 press-release=Persbericht
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Druk op de knop hieronder om uw eenmalig wachtwoord te ontvangen. Het wordt verzonden naar {0}.
@@ -17775,6 +17793,7 @@ transitions=Overgangen
 translate=Vertalen
 translate-from=Vertalen van
 translated=Vertaald
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=Wordt vertaald
 translating-web-content-to-x=Webcontent vertalen naar {0}
 translation=Vertaler
