--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=Current Site Role IDs (Automatic Copy)
 current-step=Current Step (Automatic Copy)
 current-theme=Huidig thema
 current-title=Huidige titel
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=Huidige gebruiker
 current-url-help=Represents the URL that was used to make the current request to the portal. (Automatic Copy)
 current-user=Huidige gebruiker
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=Selecteer de rollen die de nieuwe siteleden krijge
 default-template=Default Template (Automatic Copy)
 default-template-shorten=Default Template (Shorten) (Automatic Copy)
 default-theme=Default Theme (Automatic Copy)
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=Standaard gebruikerskoppelingen
 default-user-password=Default User Password (Automatic Copy)
 default-value=Standaard waarde
@@ -8817,34 +8819,48 @@ language.da=Deens
 language.de=Duits
 language.el=Grieks
 language.en=Engels
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=Spaans
 language.es_AR=Spanish (Argentina) (Automatic Copy)
 language.es_CO=Spanish (Colombia) (Automatic Copy)
 language.es_MX=Spanish (Mexico) (Automatic Copy)
 language.et=Estisch
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=Fins
 language.fr=Frans
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=Hindi (Automatic Copy)
+language.hr=Croatian (Automatic Copy)
 language.ht=Haïtiaans
 language.hu=Hongaars
 language.in=Indonesisch
 language.it=Italiaans
 language.iw=Hebreeuws
 language.ja=Japans
+language.kk=Kazakh (Automatic Copy)
 language.ko=Koreaans
+language.lo=Lao (Automatic Copy)
 language.lt=Litouws
 language.lv=Lets
 language.ms=Malay (Automatic Copy)
 language.mww=Hmong Daw (Automatic Copy)
 language.nb=Noors
 language.nl=Nederlands
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=Pools
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=Portugees
 language.ro=Roemeens
 language.ru=Russisch
 language.sk=Slowaak
 language.sl=Slowaak
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=Zweeds
+language.ta=Tamil (Automatic Copy)
 language.th=Thais
 language.tr=Turks
 language.uk=Oekraïens
@@ -10904,6 +10920,7 @@ not-staged=Not Staged (Automatic Copy)
 not-started=Not Started (Automatic Copy)
 not-supported=Niet ondersteund
 not-translated=Not Translated (Automatic Copy)
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=Not Visible (Automatic Copy)
 not-x=Not {0}? (Automatic Copy)
 note=Nota
@@ -12571,6 +12588,7 @@ presentation-settings=Presentatie instellingen
 presets=Voorinstellingen
 press-enter-to-add-x-field=Press enter to add {0} field. (Automatic Copy)
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=Press enter to choose this field set or use arrow keys to navigate through the available field sets. Press escape at any time to close this dialog. (Automatic Copy)
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=Press escape to remove the bar's category filters. (Automatic Copy)
 press-release=Persbericht
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Press the button below to obtain your one-time password. It will be sent to {0}. (Automatic Copy)
@@ -17775,6 +17793,7 @@ transitions=Transitions (Automatic Copy)
 translate=Vertaal
 translate-from=Translate From (Automatic Copy)
 translated=Translated (Automatic Copy)
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=Translating (Automatic Copy)
 translating-web-content-to-x=Webcontent vertalen naar {0}
 translation=Vertaler
