--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=IDs da função do site atual
 current-step=Etapa atual
 current-theme=Tema atual
 current-title=Título atual
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=URL atual
 current-url-help=Representa a URL que foi usada para realizar a solicitação atual ao portal.
 current-user=Usuário atual
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=Selecione os times que os membros recém-associado
 default-template=Modelo Padrão
 default-template-shorten=Modelo Padrão (Reduzir)
 default-theme=Tema padrão
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=Padrões de Associação de Usuário
 default-user-password=Senha de usuário padrão
 default-value=Valor padrão
@@ -8814,34 +8816,48 @@ language.da=Dinamarquês
 language.de=Alemão
 language.el=Grego
 language.en=Inglês
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=Espanhol
 language.es_AR=Espanhol (Argentina)
 language.es_CO=Espanhol (Colômbia)
 language.es_MX=Espanhol (México)
 language.et=Estônico
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=Finlandês
 language.fr=Francês
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=Hindi
+language.hr=Croatian (Automatic Copy)
 language.ht=Crioulo Haitiano
 language.hu=Húngaro
 language.in=Indonésio
 language.it=Italiano
 language.iw=Hebraico
 language.ja=Japonês
+language.kk=Kazakh (Automatic Copy)
 language.ko=Coreano
+language.lo=Lao (Automatic Copy)
 language.lt=Lituano
 language.lv=Letão
 language.ms=Malásia
 language.mww=Hmong Branco
 language.nb=Norueguês (Bokmål)
 language.nl=Holandês
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=Polonês
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=Português
 language.ro=Romeno
 language.ru=Russo
 language.sk=Eslovaco
 language.sl=Esloveno
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=Sueco
+language.ta=Tamil (Automatic Copy)
 language.th=Tailandês
 language.tr=Turco
 language.uk=Ucraniano
@@ -10901,6 +10917,7 @@ not-staged=Não Preparado
 not-started=Não iniciado
 not-supported=Não suportado
 not-translated=Não traduzido
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=Não Visível
 not-x={0} não?
 note=Nota
@@ -12568,6 +12585,7 @@ presentation-settings=Configurações de apresentação
 presets=Pré-ajustes
 press-enter-to-add-x-field=Pressione enter para adicionar o campo {0}.
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=Pressione enter para escolher este conjunto de campos ou use as teclas de seta para navegar pelos conjuntos de campos disponíveis. Pressione escape a qualquer momento para fechar este diálogo.
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=Pressione escape para remover os filtros da categoria da barra.
 press-release=Boletim de imprensa
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Pressione o botão abaixo para obter sua senha única. Ela será enviada para {0}.
@@ -17772,6 +17790,7 @@ transitions=Transições
 translate=Traduza
 translate-from=Traduzir de
 translated=Traduzido
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=Traduzindo
 translating-web-content-to-x=Traduzir conteúdo web para {0}
 translation=Tradutor
