--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=Current Site Role IDs (Automatic Copy)
 current-step=Passo atual (Automatic Translation)
 current-theme=Tema Atual
 current-title=Título Atual
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=URL Atual
 current-url-help=Representa o URL que foi usado para fazer o pedido atual ao portal.
 current-user=Utilizador Atual
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=Selecione as equipas às quais os membros recém-a
 default-template=Modelo padrão (Automatic Translation)
 default-template-shorten=Modelo padrão (encurtar) (Automatic Translation)
 default-theme=Tema por Omissão
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=Associações de Utilizador por Omissão
 default-user-password=Default User Password (Automatic Copy)
 default-value=Valor por Omissão
@@ -8816,34 +8818,48 @@ language.da=Dinamarquês
 language.de=Alemão
 language.el=Grego
 language.en=Inglês
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=Espanhol
 language.es_AR=Spanish (Argentina) (Automatic Copy)
 language.es_CO=Spanish (Colombia) (Automatic Copy)
 language.es_MX=Spanish (Mexico) (Automatic Copy)
 language.et=Estoniano
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=Finlandês
 language.fr=Francês
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=Hindi (Automatic Copy)
+language.hr=Croatian (Automatic Copy)
 language.ht=Haitiano
 language.hu=Búlgaro
 language.in=Indonésio
 language.it=Italiano
 language.iw=Hebraico
 language.ja=Japonês
+language.kk=Kazakh (Automatic Copy)
 language.ko=Coreano
+language.lo=Lao (Automatic Copy)
 language.lt=Lituano
 language.lv=Letão
 language.ms=Malaio
 language.mww=Mong
 language.nb=Norueguês
 language.nl=Holandês
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=Polaco
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=Português
 language.ro=Romeno
 language.ru=Russo
 language.sk=Eslovaco
 language.sl=Esloveno
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=Sueco
+language.ta=Tamil (Automatic Copy)
 language.th=Tailandês
 language.tr=Turco
 language.uk=Ucraniano
@@ -10903,6 +10919,7 @@ not-staged=Não está em Staging
 not-started=Não Começou (Automatic Translation)
 not-supported=Não Suportado
 not-translated=Não Traduzido (Automatic Translation)
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=Não Visível
 not-x=Not {0}? (Automatic Copy)
 note=Nota
@@ -12570,6 +12587,7 @@ presentation-settings=Configurações de apresentação
 presets=Pré-ajustes
 press-enter-to-add-x-field=Press enter to add {0} field. (Automatic Copy)
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=Press enter to choose this field set or use arrow keys to navigate through the available field sets. Press escape at any time to close this dialog. (Automatic Copy)
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=Pressione a fuga para remover os filtros da categoria da barra. (Automatic Translation)
 press-release=Comunicado de Impressa
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Press the button below to obtain your one-time password. It will be sent to {0}. (Automatic Copy)
@@ -17774,6 +17792,7 @@ transitions=Transições (Automatic Translation)
 translate=Traduza
 translate-from=Traduzir do (Automatic Translation)
 translated=Translated (Automatic Copy)
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=Tradução em andamento (Automatic Translation)
 translating-web-content-to-x=Traduzir Conteúdo Web para {0}
 translation=Tradução
