--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=Current Site Role IDs (Automatic Copy)
 current-step=Pasul curent (Automatic Translation)
 current-theme=Temă Curentă
 current-title=Titlu curent
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=Utilizator Curent
 current-url-help=Reprezintă URL-ul care a fost utilizat pentru a face solicitarea curentă către portal. (Automatic Translation)
 current-user=Utilizator Curent
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=Selectați echipele din care fac parte noii membri
 default-template=Șablon implicit (Automatic Translation)
 default-template-shorten=Șablon implicit (scurtare) (Automatic Translation)
 default-theme=Temă implicită (Automatic Translation)
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=Asocieri de Utilizatori Impliciți
 default-user-password=Parolă utilizator implicită (Automatic Translation)
 default-value=Valoare Implicite
@@ -8814,34 +8816,48 @@ language.da=Daneză
 language.de=Germană
 language.el=Greacă
 language.en=Editează
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=Spaniola
 language.es_AR=Spanish (Argentina) (Automatic Copy)
 language.es_CO=Spanish (Colombia) (Automatic Copy)
 language.es_MX=Spanish (Mexico) (Automatic Copy)
 language.et=Estonă
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=Finlandeză
 language.fr=Fraceză
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=Hindi
+language.hr=Croatian (Automatic Copy)
 language.ht=Creolă haitiană
 language.hu=Maghiară
 language.in=Indoneziană
 language.it=Italiana
 language.iw=Ebraică
 language.ja=Japoneză
+language.kk=Kazakh (Automatic Copy)
 language.ko=Coreeană
+language.lo=Lao (Automatic Copy)
 language.lt=Lituaniană
 language.lv=Letonă
 language.ms=Malaieză
 language.mww=Hmong Daw
 language.nb=Norvegiana
 language.nl=Olandeză
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=Poloneza
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=Portugheza
 language.ro=Romanana
 language.ru=Rusa
 language.sk=Slovaca
 language.sl=Slovaca
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=Suedeza
+language.ta=Tamil (Automatic Copy)
 language.th=Thai
 language.tr=Turcă
 language.uk=Ucraniana
@@ -10901,6 +10917,7 @@ not-staged=Nu este pus în scenă (Automatic Translation)
 not-started=Neînceput (Automatic Translation)
 not-supported=Nu este Suportat
 not-translated=Ne tradus (Automatic Translation)
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=Nu este vizibil (Automatic Translation)
 not-x=Not {0}? (Automatic Copy)
 note=Notita
@@ -12568,6 +12585,7 @@ presentation-settings=Setari Prezentare
 presets=Presetari
 press-enter-to-add-x-field=Press enter to add {0} field. (Automatic Copy)
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=Press enter to choose this field set or use arrow keys to navigate through the available field sets. Press escape at any time to close this dialog. (Automatic Copy)
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=Apăsați escape pentru a elimina filtrele de categorie ale barei. (Automatic Translation)
 press-release=Comunicate de Presa
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Press the button below to obtain your one-time password. It will be sent to {0}. (Automatic Copy)
@@ -17772,6 +17790,7 @@ transitions=Tranziţii (Automatic Translation)
 translate=Traducere
 translate-from=Traducere din (Automatic Translation)
 translated=Tradus (Automatic Translation)
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=Traducerea (Automatic Translation)
 translating-web-content-to-x=Translating Web Content to {0} (Automatic Copy)
 translation=Traducător
