--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=Current Site Role IDs (Automatic Copy)
 current-step=Текущий шаг (Automatic Translation)
 current-theme=Текущая тема
 current-title=Текущее название
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=Текущий URL
 current-url-help=Представляет собой URL который использовался как текущий запрос для доступа к порталу.
 current-user=Текущий пользователь
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=Выберите роли, которые буду
 default-template=Шаблон по умолчанию (Automatic Translation)
 default-template-shorten=Шаблон по умолчанию (Сокращение) (Automatic Translation)
 default-theme=Тема по умолчанию
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=Связи пользователя по умолчанию
 default-user-password=Пароль пользователя по умолчанию (Automatic Translation)
 default-value=Значения по умолчанию
@@ -8814,34 +8816,48 @@ language.da=Датский
 language.de=Немецкий
 language.el=Греческий
 language.en=Английский
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=Испанский
 language.es_AR=Spanish (Argentina) (Automatic Copy)
 language.es_CO=Spanish (Colombia) (Automatic Copy)
 language.es_MX=Spanish (Mexico) (Automatic Copy)
 language.et=Эстонский
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=Финский
 language.fr=Французкий
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=Хинди
+language.hr=Croatian (Automatic Copy)
 language.ht=Гаитянский Креольский
 language.hu=Венгерский
 language.in=Индонезийский
 language.it=Итальянский
 language.iw=Иврит
 language.ja=Японский
+language.kk=Kazakh (Automatic Copy)
 language.ko=Корейский
+language.lo=Lao (Automatic Copy)
 language.lt=Литовский
 language.lv=Латвийский
 language.ms=малайский
 language.mww=Хмонг
 language.nb=Норвежский
 language.nl=Нидерландский
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=Польский
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=Португальский
 language.ro=Румынский
 language.ru=Русский
 language.sk=Словацкий
 language.sl=Словенский
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=Шведский
+language.ta=Tamil (Automatic Copy)
 language.th=Тайский
 language.tr=Турецкий
 language.uk=Украинский
@@ -10901,6 +10917,7 @@ not-staged=Не постановка (Automatic Translation)
 not-started=Не запущено (Automatic Translation)
 not-supported=Не поддерживаются
 not-translated=Не переведено (Automatic Translation)
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=Не видно (Automatic Translation)
 not-x=Not {0}? (Automatic Copy)
 note=Заметка
@@ -12568,6 +12585,7 @@ presentation-settings=Настройки представления
 presets=Предустановки
 press-enter-to-add-x-field=Press enter to add {0} field. (Automatic Copy)
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=Press enter to choose this field set or use arrow keys to navigate through the available field sets. Press escape at any time to close this dialog. (Automatic Copy)
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=Нажмите побег, чтобы удалить фильтры категории бара. (Automatic Translation)
 press-release=Пресс-релиз
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Press the button below to obtain your one-time password. It will be sent to {0}. (Automatic Copy)
@@ -17772,6 +17790,7 @@ transitions=Переходы (Automatic Translation)
 translate=Перевести
 translate-from=Перевести с (Automatic Translation)
 translated=Перевод (Automatic Translation)
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=Выполняется перевод (Automatic Translation)
 translating-web-content-to-x=Сетевой контент переводится на {0}
 translation=Переводчик
