--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=Current Site Role IDs (Automatic Copy)
 current-step=Aktuálny krok (Automatic Translation)
 current-theme=Súčasná téma
 current-title=Aktuálny titul
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=Aktuálna URL
 current-url-help=Predstavuje URL, ktorá bola použitá na vytvorenie aktuálnej požiadavky na portál.
 current-user=Súčasný používateľ
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=Vyberte role, ktoré automaticky získajú novopri
 default-template=Predvolená šablóna (Automatic Translation)
 default-template-shorten=Predvolená šablóna (skrátiť) (Automatic Translation)
 default-theme=Predvolená téma
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=Predvolené používateľské asociácie
 default-user-password=Predvolené heslo používateľa (Automatic Translation)
 default-value=Predvolená hodnota
@@ -8814,34 +8816,48 @@ language.da=Dánčina
 language.de=Nemčina
 language.el=Gréčtina
 language.en=Angličtina
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=Španielčina
 language.es_AR=Spanish (Argentina) (Automatic Copy)
 language.es_CO=Spanish (Colombia) (Automatic Copy)
 language.es_MX=Spanish (Mexico) (Automatic Copy)
 language.et=Estónčina
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=Fínčina
 language.fr=Francúzština
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=Hindčina
+language.hr=Croatian (Automatic Copy)
 language.ht=Haitská kreolčina
 language.hu=Maďarčina
 language.in=Indonézčina
 language.it=Taliančina
 language.iw=Hebrejčina
 language.ja=Japončina
+language.kk=Kazakh (Automatic Copy)
 language.ko=Kórejčina
+language.lo=Lao (Automatic Copy)
 language.lt=Litovčina
 language.lv=Lotyščina
 language.ms=malajčina
 language.mww=Hmong Daw
 language.nb=Nórčina
 language.nl=Holandčina
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=Polština
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=Portugalčina
 language.ro=Rumunčina
 language.ru=Ruština
 language.sk=Slovenčina
 language.sl=Slovinčina
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=Švédština
+language.ta=Tamil (Automatic Copy)
 language.th=Thajčina
 language.tr=Turečtina
 language.uk=Ukrajinčina
@@ -10901,6 +10917,7 @@ not-staged=Nie pripravované
 not-started=Nie je spustené (Automatic Translation)
 not-supported=Nepodporované
 not-translated=Nepreložené (Automatic Translation)
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=Neviditeľné
 not-x=Not {0}? (Automatic Copy)
 note=Poznámka
@@ -12568,6 +12585,7 @@ presentation-settings=Prezentačné nastavenia
 presets=Prednastavenia
 press-enter-to-add-x-field=Press enter to add {0} field. (Automatic Copy)
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=Press enter to choose this field set or use arrow keys to navigate through the available field sets. Press escape at any time to close this dialog. (Automatic Copy)
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=Stlačením klávesu Escape odstráňte filtre kategórií pruhu. (Automatic Translation)
 press-release=Tlačová správa
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Press the button below to obtain your one-time password. It will be sent to {0}. (Automatic Copy)
@@ -17772,6 +17790,7 @@ transitions=Prechody (Automatic Translation)
 translate=Preložiť
 translate-from=Preložiť z (Automatic Translation)
 translated=Preložené (Automatic Translation)
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=Prekladať (Automatic Translation)
 translating-web-content-to-x=Prekladanie webového obsahu do {0}
 translation=Prekladač
