--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=Current Site Role IDs (Automatic Copy)
 current-step=Trenutni korak (Automatic Translation)
 current-theme=Trenutna tema
 current-title=Trenutni naslov
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=Trenutni uporabnik
 current-url-help=Predstavlja URL, ki je bil uporabljen za trenutno zahtevo na portal. (Automatic Translation)
 current-user=Trenutni uporabnik
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=Izberite ekipe, ki so jim člani na novo dodeljene
 default-template=Privzeta predloga (Automatic Translation)
 default-template-shorten=Privzeta predloga (skrajšanje) (Automatic Translation)
 default-theme=Privzeta tema (Automatic Translation)
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=Privzete povezave uporabnikov
 default-user-password=Privzeto uporabniško geslo (Automatic Translation)
 default-value=Privzeta vrednost
@@ -8814,34 +8816,48 @@ language.da=Dansko
 language.de=Nemško
 language.el=grščina
 language.en=Angleško
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=Špansko
 language.es_AR=Spanish (Argentina) (Automatic Copy)
 language.es_CO=Spanish (Colombia) (Automatic Copy)
 language.es_MX=Spanish (Mexico) (Automatic Copy)
 language.et=estonščina
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=finščina
 language.fr=Francosko
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=hindijščina
+language.hr=Croatian (Automatic Copy)
 language.ht=Haitijska Kreolska
 language.hu=Madžarsko
 language.in=indonezijščina
 language.it=Italijanščina
 language.iw=hebrejščina
 language.ja=japonščina
+language.kk=Kazakh (Automatic Copy)
 language.ko=Korejščina
+language.lo=Lao (Automatic Copy)
 language.lt=litovščina
 language.lv=latvijščina
 language.ms=malajščina
 language.mww=Hmong Daw
 language.nb=Norveško
 language.nl=Nizozemsko
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=Poljsko
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=Portugalsko
 language.ro=Romunsko
 language.ru=Ruščina
 language.sk=Slovaško
 language.sl=Slovaško
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=Švedsko
+language.ta=Tamil (Automatic Copy)
 language.th=tajščina
 language.tr=turščina
 language.uk=Ukrajinsko
@@ -10901,6 +10917,7 @@ not-staged=Ni ugasnjeno (Automatic Translation)
 not-started=Ni zagnano (Automatic Translation)
 not-supported=Ni podprto
 not-translated=Ni prevedeno (Automatic Translation)
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=Ni vidno (Automatic Translation)
 not-x=Not {0}? (Automatic Copy)
 note=Zapis
@@ -12568,6 +12585,7 @@ presentation-settings=Nastavitve predstavitve
 presets=Prednastavitve
 press-enter-to-add-x-field=Press enter to add {0} field. (Automatic Copy)
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=Press enter to choose this field set or use arrow keys to navigate through the available field sets. Press escape at any time to close this dialog. (Automatic Copy)
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=Pritisnite izhod, da odstranite filtre kategorije v vrstici. (Automatic Translation)
 press-release=Medijska objava
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Press the button below to obtain your one-time password. It will be sent to {0}. (Automatic Copy)
@@ -17772,6 +17790,7 @@ transitions=Prehodi (Automatic Translation)
 translate=Prevedi.
 translate-from=Prevedi iz (Automatic Translation)
 translated=Prevedena (Automatic Translation)
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=prevajanje (Automatic Translation)
 translating-web-content-to-x=Translating Web Content to {0} (Automatic Copy)
 translation=Prevajalnik
