--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=Nuvarande platsroll-ID:n
 current-step=Nuvarande steg
 current-theme=Nuvarande tema
 current-title=Nuvarande titel
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=Nuvarande användare
 current-url-help=Representerar URL:en som används för att göra nuvarande begäran till portal.
 current-user=Nuvarande användare
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=Välj teams som de nyligen tilldelade webbplatsmed
 default-template=Standardmall
 default-template-shorten=Standardmall (förkorta)
 default-theme=Standardtema
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=Användares standardtillhörighet
 default-user-password=Standardanvändarlösenord
 default-value=Standardvärde
@@ -8814,34 +8816,48 @@ language.da=Dansk
 language.de=Tysk
 language.el=Grekiska
 language.en=Engelska
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=Spanska
 language.es_AR=Spanska (Argentina)
 language.es_CO=Spanska (Colombia)
 language.es_MX=Spanska (Mexiko)
 language.et=Estniska
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=Finska
 language.fr=Fransk
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=Hindi
+language.hr=Croatian (Automatic Copy)
 language.ht=Haitisk kreol
 language.hu=Ungersk
 language.in=Indonesiska
 language.it=Italiensk
 language.iw=Hebreiska
 language.ja=Japanska
+language.kk=Kazakh (Automatic Copy)
 language.ko=Koreansk
+language.lo=Lao (Automatic Copy)
 language.lt=Litauiska
 language.lv=Lettiska
 language.ms=Malajiska
 language.mww=Hmong Daw
 language.nb=Norsk
 language.nl=Holländsk
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=Polsk
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=Portugisiska
 language.ro=Rumänska
 language.ru=Ryska
 language.sk=Slovakiska
 language.sl=Slovakiska
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=Svensk
+language.ta=Tamil (Automatic Copy)
 language.th=Thailändska
 language.tr=Turkiska
 language.uk=Ukrainska
@@ -10901,6 +10917,7 @@ not-staged=Har inte mellanlagrats
 not-started=Har inte startat
 not-supported=Stöds inte
 not-translated=Inte översatt
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=Inte synlig
 not-x=Inte {0}?
 note=Anteckning
@@ -12568,6 +12585,7 @@ presentation-settings=Presentationsinställningar
 presets=Förinställningar
 press-enter-to-add-x-field=Tryck på Enter för att lägga till {0} fält.
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=Tryck på Retur för att välja den här fältuppsättningen eller använd piltangenter genom de tillgängliga fältuppsättningarna. Tryck på Escape när som helst för att stänga dialogen.
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=Tryck på Escape för att ta bort fältets kategorifilter.
 press-release=Pressmeddelande
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Tryck på knappen nedanför för att hämta ditt engångslösenord. Det skickas till {0}.
@@ -17772,6 +17790,7 @@ transitions=Överföringar
 translate=Översätt
 translate-from=Översätt från
 translated=Översatt
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=Översätter
 translating-web-content-to-x=Översätter webbinnehåll till {0}
 translation=Översättare
