--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=当前站点角色 ID
 current-step=当前步骤
 current-theme=当前主题模式
 current-title=当前标题
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=当前的URL
 current-url-help=代表被用来向portlet发送当前请求的URL。
 current-user=当前用户
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=为新分配的站点成员选择团队。
 default-template=默认模板
 default-template-shorten=默认模板（缩短）
 default-theme=默认主题
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=默认用户关联
 default-user-password=默认用户密码
 default-value=默认值
@@ -8816,34 +8818,48 @@ language.da=丹麦语
 language.de=德语
 language.el=希腊语
 language.en=英语
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=西班牙语
 language.es_AR=西班牙语（阿根廷）
 language.es_CO=西班牙语（哥伦比亚）
 language.es_MX=西班牙语（墨西哥）
 language.et=爱沙尼亚语
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=芬兰语
 language.fr=法语
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=北印度语
+language.hr=Croatian (Automatic Copy)
 language.ht=海地克里奥尔语
 language.hu=匈牙利语
 language.in=印度尼西亚语
 language.it=意大利语
 language.iw=希伯来语
 language.ja=日语
+language.kk=Kazakh (Automatic Copy)
 language.ko=韩语
+language.lo=Lao (Automatic Copy)
 language.lt=立陶宛语
 language.lv=拉脱维亚语
 language.ms=马来语
 language.mww=川黔滇苗语
 language.nb=挪威语
 language.nl=荷兰语
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=波兰语
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=葡萄牙语
 language.ro=罗马尼亚语
 language.ru=俄语
 language.sk=斯洛伐克语
 language.sl=斯洛文尼亚语
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=瑞典语
+language.ta=Tamil (Automatic Copy)
 language.th=泰国语
 language.tr=土耳其语
 language.uk=乌克兰语
@@ -10903,6 +10919,7 @@ not-staged=未暂存
 not-started=未启动
 not-supported=不支持
 not-translated=未翻译
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=不可见
 not-x=不是 {0}？
 note=注释
@@ -12570,6 +12587,7 @@ presentation-settings=显示设置
 presets=预先设定
 press-enter-to-add-x-field=按 Enter 键添加"{0}"字段。
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=按 Enter 选择此字段集或使用箭头键在可用字段集中导航。随时按 Escape 可关闭此对话框。
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=按 Escape 移除栏的类别筛选器。
 press-release=新闻发布
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=按下面的按钮以获取一次性密码。该密码将发送至 {0}。
@@ -17774,6 +17792,7 @@ transitions=过渡
 translate=翻译
 translate-from=源语言：
 translated=已翻译
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=正在翻译
 translating-web-content-to-x=正在将 Web 内容翻译成{0}
 translation=翻译器
