--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=Current Site Role IDs (Automatic Copy)
 current-step=Current Step (Automatic Copy)
 current-theme=Toto téma
 current-title=Současný název
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=Tento uživatel
 current-url-help=Představuje URL, ze které byl požadavek na portál zaslán.
 current-user=Tento uživatel
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=Vyberte role, které budou přiřazeny novým čle
 default-template=Default Template (Automatic Copy)
 default-template-shorten=Default Template (Shorten) (Automatic Copy)
 default-theme=Výchozí téma
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=Přednastavení pro nové uživatele
 default-user-password=Default User Password (Automatic Copy)
 default-value=Výchozí hodnota
@@ -8814,34 +8816,48 @@ language.da=Dánský
 language.de=Německý
 language.el=Řecký
 language.en=Anglický
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=Španělský
 language.es_AR=Spanish (Argentina) (Automatic Copy)
 language.es_CO=Spanish (Colombia) (Automatic Copy)
 language.es_MX=Spanish (Mexico) (Automatic Copy)
 language.et=Estonský
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=Finský
 language.fr=Francouzský
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=Hindský
+language.hr=Croatian (Automatic Copy)
 language.ht=Haitská kreolština
 language.hu=Maďarský
 language.in=Indonéský
 language.it=Italský
 language.iw=Hebrejský
 language.ja=Japonský
+language.kk=Kazakh (Automatic Copy)
 language.ko=Korejský
+language.lo=Lao (Automatic Copy)
 language.lt=Lotyšský
 language.lv=Litevský
 language.ms=Malajština
 language.mww=Hmong Daw (Automatic Copy)
 language.nb=Norský
 language.nl=Dánský
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=Polský
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=Portugalský
 language.ro=Rumunský
 language.ru=Ruský
 language.sk=Slovenský
 language.sl=Slovinský
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=Švédský
+language.ta=Tamil (Automatic Copy)
 language.th=Thajský
 language.tr=Turecký
 language.uk=Ukrajinský
@@ -10901,6 +10917,7 @@ not-staged=Není nahrané (Automatic Translation)
 not-started=Nebylo spuštěno (Automatic Translation)
 not-supported=Nepodporováno
 not-translated=Nepřeložili (Automatic Translation)
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=Není viditelné (Automatic Translation)
 not-x=Not {0}? (Automatic Copy)
 note=Poznámka
@@ -12568,6 +12585,7 @@ presentation-settings=Nastavení prezentace
 presets=Přednastavené
 press-enter-to-add-x-field=Press enter to add {0} field. (Automatic Copy)
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=Press enter to choose this field set or use arrow keys to navigate through the available field sets. Press escape at any time to close this dialog. (Automatic Copy)
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=Press escape to remove the bar's category filters. (Automatic Copy)
 press-release=Tiskové zprávy
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Press the button below to obtain your one-time password. It will be sent to {0}. (Automatic Copy)
@@ -17772,6 +17790,7 @@ transitions=Transitions (Automatic Copy)
 translate=Přelož
 translate-from=Translate From (Automatic Copy)
 translated=Translated (Automatic Copy)
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=Translating (Automatic Copy)
 translating-web-content-to-x=Překládání webového obsahu do {0}
 translation=Překladač
