--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=Current Site Role IDs (Automatic Copy)
 current-step=Aktuelt trin (Automatic Translation)
 current-theme=Nuværende tema
 current-title=Nuværende titel
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=Nuværende bruger
 current-url-help=Represents the URL that was used to make the current request to the portal. (Automatic Copy)
 current-user=Nuværende bruger
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=Vælg de grupper, som de nyligt tildelte webstedsm
 default-template=Standardskabelon (Automatic Translation)
 default-template-shorten=Standardskabelon (forkort) (Automatic Translation)
 default-theme=Standardtema (Automatic Translation)
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=Standard brugerassociations
 default-user-password=Default User Password (Automatic Copy)
 default-value=Standardværdi
@@ -8814,34 +8816,48 @@ language.da=Dansk
 language.de=German (Automatic Copy)
 language.el=Greek (Automatic Copy)
 language.en=Engelsk
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=Spansk
 language.es_AR=Spanish (Argentina) (Automatic Copy)
 language.es_CO=Spanish (Colombia) (Automatic Copy)
 language.es_MX=Spanish (Mexico) (Automatic Copy)
 language.et=Estonian (Automatic Copy)
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=Finnish (Automatic Copy)
 language.fr=Fransk
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=Hindi (Automatic Copy)
+language.hr=Croatian (Automatic Copy)
 language.ht=Haitian Creole (Automatic Copy)
 language.hu=Bulgarsk
 language.in=Indonesian (Automatic Copy)
 language.it=Italian (Automatic Copy)
 language.iw=Hebrew (Automatic Copy)
 language.ja=Japanese (Automatic Copy)
+language.kk=Kazakh (Automatic Copy)
 language.ko=Koreansk
+language.lo=Lao (Automatic Copy)
 language.lt=Lithuanian (Automatic Copy)
 language.lv=Latvian (Automatic Copy)
 language.ms=Malay (Automatic Copy)
 language.mww=Hmong Daw (Automatic Copy)
 language.nb=Norsk
 language.nl=Dutch (Automatic Copy)
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=Polsk
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=Portugesisk
 language.ro=Romansk
 language.ru=Russisk
 language.sk=Slovak (Automatic Copy)
 language.sl=Slovenian (Automatic Copy)
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=Svensk
+language.ta=Tamil (Automatic Copy)
 language.th=Thai (Automatic Copy)
 language.tr=Turkish (Automatic Copy)
 language.uk=Ukrainsk
@@ -10901,6 +10917,7 @@ not-staged=Not Staged (Automatic Copy)
 not-started=Ikke startet (Automatic Translation)
 not-supported=Ikke understøttet
 not-translated=Ikke oversat (Automatic Translation)
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=Not Visible (Automatic Copy)
 not-x=Not {0}? (Automatic Copy)
 note=Noter
@@ -12568,6 +12585,7 @@ presentation-settings=Indstillinger for præsentation (Automatic Translation)
 presets=Presets (Automatic Copy)
 press-enter-to-add-x-field=Press enter to add {0} field. (Automatic Copy)
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=Press enter to choose this field set or use arrow keys to navigate through the available field sets. Press escape at any time to close this dialog. (Automatic Copy)
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=Tryk på Esc for at fjerne linjens kategorifiltre. (Automatic Translation)
 press-release=Press Release (Automatic Copy)
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Press the button below to obtain your one-time password. It will be sent to {0}. (Automatic Copy)
@@ -17772,6 +17790,7 @@ transitions=Overgange (Automatic Translation)
 translate=Oversæt
 translate-from=Oversæt fra (Automatic Translation)
 translated=Translated (Automatic Copy)
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=Oversætte (Automatic Translation)
 translating-web-content-to-x=Translating webindhold to {0}
 translation=Oversætter
