--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_GB.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_GB.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=Current Site Role IDs (Automatic Copy)
 current-step=Current Step (Automatic Copy)
 current-theme=Current Theme (Automatic Copy)
 current-title=Current Title (Automatic Copy)
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=Current URL (Automatic Copy)
 current-url-help=Represents the URL that was used to make the current request to the portal. (Automatic Copy)
 current-user=Current User (Automatic Copy)
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=Select the teams that the newly assigned site memb
 default-template=Default Template (Automatic Copy)
 default-template-shorten=Default Template (Shorten) (Automatic Copy)
 default-theme=Default Theme (Automatic Copy)
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=Default User Associations (Automatic Copy)
 default-user-password=Default User Password (Automatic Copy)
 default-value=Default Value (Automatic Copy)
@@ -8814,34 +8816,48 @@ language.da=Danish (Automatic Copy)
 language.de=German (Automatic Copy)
 language.el=Greek (Automatic Copy)
 language.en=English (Automatic Copy)
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=Spanish (Automatic Copy)
 language.es_AR=Spanish (Argentina) (Automatic Copy)
 language.es_CO=Spanish (Colombia) (Automatic Copy)
 language.es_MX=Spanish (Mexico) (Automatic Copy)
 language.et=Estonian (Automatic Copy)
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=Finnish (Automatic Copy)
 language.fr=French (Automatic Copy)
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=Hindi (Automatic Copy)
+language.hr=Croatian (Automatic Copy)
 language.ht=Haitian Creole (Automatic Copy)
 language.hu=Hungarian (Automatic Copy)
 language.in=Indonesian (Automatic Copy)
 language.it=Italian (Automatic Copy)
 language.iw=Hebrew (Automatic Copy)
 language.ja=Japanese (Automatic Copy)
+language.kk=Kazakh (Automatic Copy)
 language.ko=Korean (Automatic Copy)
+language.lo=Lao (Automatic Copy)
 language.lt=Lithuanian (Automatic Copy)
 language.lv=Latvian (Automatic Copy)
 language.ms=Malay (Automatic Copy)
 language.mww=Hmong Daw (Automatic Copy)
 language.nb=Norwegian (Automatic Copy)
 language.nl=Dutch (Automatic Copy)
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=Polish (Automatic Copy)
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=Portuguese (Automatic Copy)
 language.ro=Romanian (Automatic Copy)
 language.ru=Russian (Automatic Copy)
 language.sk=Slovak (Automatic Copy)
 language.sl=Slovenian (Automatic Copy)
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=Swedish (Automatic Copy)
+language.ta=Tamil (Automatic Copy)
 language.th=Thai (Automatic Copy)
 language.tr=Turkish (Automatic Copy)
 language.uk=Ukranian (Automatic Copy)
@@ -10901,6 +10917,7 @@ not-staged=Not Staged (Automatic Copy)
 not-started=Not Started (Automatic Copy)
 not-supported=Not Supported (Automatic Copy)
 not-translated=Not Translated (Automatic Copy)
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=Not Visible (Automatic Copy)
 not-x=Not {0}? (Automatic Copy)
 note=Note (Automatic Copy)
@@ -12568,6 +12585,7 @@ presentation-settings=Presentation Settings (Automatic Copy)
 presets=Presets (Automatic Copy)
 press-enter-to-add-x-field=Press enter to add {0} field. (Automatic Copy)
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=Press enter to choose this field set or use arrow keys to navigate through the available field sets. Press escape at any time to close this dialog. (Automatic Copy)
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=Press escape to remove the bar's category filters. (Automatic Copy)
 press-release=Press Release (Automatic Copy)
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Press the button below to obtain your one-time password. It will be sent to {0}. (Automatic Copy)
@@ -17772,6 +17790,7 @@ transitions=Transitions (Automatic Copy)
 translate=Translate (Automatic Copy)
 translate-from=Translate From (Automatic Copy)
 translated=Translated (Automatic Copy)
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=Translating (Automatic Copy)
 translating-web-content-to-x=Translating Web Content to {0} (Automatic Copy)
 translation=Translation (Automatic Copy)
