--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=Current Site Role IDs (Automatic Copy)
 current-step=Paso actual
 current-theme=Tema actual
 current-title=Título actual
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=Usuario actual
 current-url-help=Represents the URL that was used to make the current request to the portal. (Automatic Copy)
 current-user=Usuario actual
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=Seleccione os equipos que terán os novos membros 
 default-template=Default Template (Automatic Copy)
 default-template-shorten=Default Template (Shorten) (Automatic Copy)
 default-theme=Tema predeterminado
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=Asociacións por defecto dos usuarios
 default-user-password=Default User Password (Automatic Copy)
 default-value=Valor por defecto
@@ -8814,34 +8816,48 @@ language.da=Danés
 language.de=Alemán
 language.el=Grego
 language.en=Inglés
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=Español
 language.es_AR=Spanish (Argentina) (Automatic Copy)
 language.es_CO=Spanish (Colombia) (Automatic Copy)
 language.es_MX=Spanish (Mexico) (Automatic Copy)
 language.et=Estoniano
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=Finlandés
 language.fr=Francés
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=Hindi
+language.hr=Croatian (Automatic Copy)
 language.ht=Haitian Creole (Automatic Copy)
 language.hu=Húngaro
 language.in=Indonesio
 language.it=Italiano
 language.iw=Hebraico
 language.ja=Xaponés
+language.kk=Kazakh (Automatic Copy)
 language.ko=Coreano
+language.lo=Lao (Automatic Copy)
 language.lt=Lituano
 language.lv=Letón
 language.ms=Malaio
 language.mww=Hmong Daw
 language.nb=Noruego
 language.nl=Holandés
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=Polaco
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=Portugués
 language.ro=Rumano
 language.ru=Ruso
 language.sk=Eslovaco
 language.sl=Eslovaco
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=Sueco
+language.ta=Tamil (Automatic Copy)
 language.th=Tailandés
 language.tr=Turco
 language.uk=Ucraniano
@@ -10901,6 +10917,7 @@ not-staged=Non está baixo Staging
 not-started=Not Started (Automatic Copy)
 not-supported=Non soportado
 not-translated=Not Translated (Automatic Copy)
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=Non visíbel
 not-x=Non é {0}?
 note=Nota
@@ -12568,6 +12585,7 @@ presentation-settings=Configurar a presentación
 presets=Configuración de fábrica
 press-enter-to-add-x-field=Press enter to add {0} field. (Automatic Copy)
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=Press enter to choose this field set or use arrow keys to navigate through the available field sets. Press escape at any time to close this dialog. (Automatic Copy)
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=Press escape to remove the bar's category filters. (Automatic Copy)
 press-release=Nota de prensa
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Press the button below to obtain your one-time password. It will be sent to {0}. (Automatic Copy)
@@ -17772,6 +17790,7 @@ transitions=Transicións
 translate=Traducir
 translate-from=Translate From (Automatic Copy)
 translated=Traducido
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=Traducindo
 translating-web-content-to-x=Traducindo contido web a {0}
 translation=Tradutor
