--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=현재 사이트 역할 ID
 current-step=현재 단계
 current-theme=현재 주제
 current-title=현재 제목
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=현재 사용자
 current-url-help=포털에 현재 요청을 하는 데 사용된 URL을 나타냅니다.
 current-user=현재 사용자
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=새로 할당된 사이트 구성원이 속할 팀
 default-template=기본 템플릿
 default-template-shorten=기본 템플릿 (단축)
 default-theme=기본 테마
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=과태 사용자 협회
 default-user-password=기본 사용자 비밀번호
 default-value=기정값
@@ -8814,34 +8816,48 @@ language.da=덴마크
 language.de=독일
 language.el=그리스어
 language.en=영국
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=스페인
 language.es_AR=Spanish (Argentina) (Automatic Copy)
 language.es_CO=Spanish (Colombia) (Automatic Copy)
 language.es_MX=Spanish (Mexico) (Automatic Copy)
 language.et=에스토니아어
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=핀란드어
 language.fr=프랑스
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=힌디어
+language.hr=Croatian (Automatic Copy)
 language.ht=아이티어
 language.hu=헝가리
 language.in=인도네시아어
 language.it=이탈리아
 language.iw=히브리어
 language.ja=일본어
+language.kk=Kazakh (Automatic Copy)
 language.ko=한국
+language.lo=Lao (Automatic Copy)
 language.lt=리투아니아어
 language.lv=라트비아어
 language.ms=말레이어
 language.mww=몽 족 갈가 마 귀
 language.nb=노르웨이
 language.nl=네덜란드
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=광택
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=포르투갈
 language.ro=루마니아
 language.ru=러시아
 language.sk=슬로바키아
 language.sl=슬로바키아
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=스웨덴
+language.ta=Tamil (Automatic Copy)
 language.th=태국어
 language.tr=터키어
 language.uk=우크라이나어
@@ -10901,6 +10917,7 @@ not-staged=스테이징 안됨
 not-started=시작되지 않음
 not-supported=지원하지 않는
 not-translated=번역되지 않음
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=보이지 않음
 not-x={0} 이 아님?
 note=주
@@ -12568,6 +12585,7 @@ presentation-settings=발표 조정
 presets=미리 설치
 press-enter-to-add-x-field=Press enter to add {0} field. (Automatic Copy)
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=Enter 키를 눌러 이 필드 세트를 선택하거나 화살표 키를 사용하여 사용 가능한 필드 세트를 탐색하십시오. 이 대화 상자를 닫으려면 언제든지 Esc 키를 누르십시오.
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=막대의 카테고리 필터를 제거하려면 Esc 키를 누르십시오.
 press-release=보도 자료
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=아래 버튼을 눌러 일회용 비밀번호를 받으세요. {0}(으)로 전송됩니다.
@@ -17771,6 +17789,7 @@ transitions=전환
 translate=번역하십시요
 translate-from=번역:
 translated=번역됨
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=번역
 translating-web-content-to-x=웹 콘텐츠를 {0}로 번역
 translation=통역
