--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=Current Site Role IDs (Automatic Copy)
 current-step=Dabartinis veiksmas (Automatic Translation)
 current-theme=Dabartinė tema (Automatic Translation)
 current-title=Dabartinis pavadinimas (Automatic Translation)
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=Dabartinis URL (Automatic Translation)
 current-url-help=Nurodo URL, kuris buvo naudojamas dabartinei užklausai portale pateikti. (Automatic Translation)
 current-user=Dabartinis vartotojas (Automatic Translation)
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=Pasirinkite komandas, kurių narys yra naujai pask
 default-template=Numatytasis šablonas (Automatic Translation)
 default-template-shorten=Numatytasis šablonas (sutrumpinti) (Automatic Translation)
 default-theme=Numatytoji tema (Automatic Translation)
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=Numatytieji vartotojų susiejimai (Automatic Translation)
 default-user-password=Numatytasis vartotojo slaptažodis (Automatic Translation)
 default-value=Numatytoji reikšmė (Automatic Translation)
@@ -8814,34 +8816,48 @@ language.da=Danų
 language.de=Vokiečių
 language.el=Graikų
 language.en=Anglų
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=Ispanų
 language.es_AR=Spanish (Argentina) (Automatic Copy)
 language.es_CO=Spanish (Colombia) (Automatic Copy)
 language.es_MX=Spanish (Mexico) (Automatic Copy)
 language.et=Estų
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=Suomių
 language.fr=Prancūzų
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=Hindi
+language.hr=Croatian (Automatic Copy)
 language.ht=Haičio kreolų
 language.hu=Vengrų
 language.in=Indoneziečių
 language.it=Italų
 language.iw=Hebrajų
 language.ja=Japonų
+language.kk=Kazakh (Automatic Copy)
 language.ko=Korėjos
+language.lo=Lao (Automatic Copy)
 language.lt=Lietuvių
 language.lv=Latvių
 language.ms=Malajų
 language.mww=Indoneziečių
 language.nb=Norvegų
 language.nl=Olandų
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=Lenkų
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=Portugalų
 language.ro=Rumunų
 language.ru=Rusų
 language.sk=Slovakų
 language.sl=Slovėnų
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=Švedų
+language.ta=Tamil (Automatic Copy)
 language.th=Tajų
 language.tr=Turkų
 language.uk=Ukrainos
@@ -10901,6 +10917,7 @@ not-staged=Ne pakopomis (Automatic Translation)
 not-started=Nepradėta (Automatic Translation)
 not-supported=Nepalaikoma (Automatic Translation)
 not-translated=Neišvertė (Automatic Translation)
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=Nematoma (Automatic Translation)
 not-x=Not {0}? (Automatic Copy)
 note=Pastaba (Automatic Translation)
@@ -12568,6 +12585,7 @@ presentation-settings=Pristatymo parametrai (Automatic Translation)
 presets=Presents (Automatic Translation)
 press-enter-to-add-x-field=Press enter to add {0} field. (Automatic Copy)
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=Press enter to choose this field set or use arrow keys to navigate through the available field sets. Press escape at any time to close this dialog. (Automatic Copy)
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=Paspauskite pabėgti, kad pašalintumėte juostos kategorijos filtrus. (Automatic Translation)
 press-release=Spaudai (Automatic Translation)
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Press the button below to obtain your one-time password. It will be sent to {0}. (Automatic Copy)
@@ -17772,6 +17790,7 @@ transitions=Perėjimai (Automatic Translation)
 translate=Vertėjas
 translate-from=Versti iš (Automatic Translation)
 translated=Išversti (Automatic Translation)
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=Versti (Automatic Translation)
 translating-web-content-to-x=Translating Web Content to {0} (Automatic Copy)
 translation=Vertėjas
