--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=Current Site Role IDs (Automatic Copy)
 current-step=Langkah Semasa (Automatic Translation)
 current-theme=Tema Semasa (Automatic Translation)
 current-title=Tajuk Semasa (Automatic Translation)
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=URL semasa (Automatic Translation)
 current-url-help=Mewakili URL yang digunakan untuk membuat permintaan semasa ke portal ini. (Automatic Translation)
 current-user=Pengguna Semasa (Automatic Translation)
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=Pilih pasukan yang ahli tapak yang baru ditugaskan
 default-template=Templat Lalai (Automatic Translation)
 default-template-shorten=Templat Lalai (Pendekkan) (Automatic Translation)
 default-theme=Tema Lalai (Automatic Translation)
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=Persatuan Pengguna Lalai (Automatic Translation)
 default-user-password=Kata Laluan Pengguna Lalai (Automatic Translation)
 default-value=Nilai Lalai (Automatic Translation)
@@ -8814,34 +8816,48 @@ language.da=Denmark
 language.de=Jerman
 language.el=Greek
 language.en=Inggeris
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=Sepanyol
 language.es_AR=Spanish (Argentina) (Automatic Copy)
 language.es_CO=Spanish (Colombia) (Automatic Copy)
 language.es_MX=Spanish (Mexico) (Automatic Copy)
 language.et=Estonia
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=Finland
 language.fr=Perancis
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=Hindi
+language.hr=Croatian (Automatic Copy)
 language.ht=Kreol Haiti
 language.hu=Hungary
 language.in=Indonesia
 language.it=Itali
 language.iw=Ibrani
 language.ja=Jepun
+language.kk=Kazakh (Automatic Copy)
 language.ko=Korea
+language.lo=Lao (Automatic Copy)
 language.lt=Lithuania
 language.lv=Latvia
 language.ms=Melayu
 language.mww=Hmong Daw
 language.nb=Norway
 language.nl=Belanda
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=Poland
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=Portugis
 language.ro=Romania
 language.ru=Rusia
 language.sk=Slovak
 language.sl=Slovenia
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=Sweden
+language.ta=Tamil (Automatic Copy)
 language.th=Thai
 language.tr=Turki
 language.uk=Ukraine
@@ -10901,6 +10917,7 @@ not-staged=Tidak Dipentaskan (Automatic Translation)
 not-started=Tidak Bermula (Automatic Translation)
 not-supported=Tidak Disokong (Automatic Translation)
 not-translated=Tidak Diterjemahkan (Automatic Translation)
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=Tidak Kelihatan (Automatic Translation)
 not-x=Not {0}? (Automatic Copy)
 note=Ambil perhatian (Automatic Translation)
@@ -12568,6 +12585,7 @@ presentation-settings=Pengesetan Pembentangan (Automatic Translation)
 presets=Pratetap (Automatic Translation)
 press-enter-to-add-x-field=Press enter to add {0} field. (Automatic Copy)
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=Press enter to choose this field set or use arrow keys to navigate through the available field sets. Press escape at any time to close this dialog. (Automatic Copy)
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=Tekan melarikan diri untuk mengalih keluar penapis kategori bar. (Automatic Translation)
 press-release=Kenyataan Akhbar (Automatic Translation)
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Press the button below to obtain your one-time password. It will be sent to {0}. (Automatic Copy)
@@ -17772,6 +17790,7 @@ transitions=Peralihan (Automatic Translation)
 translate=Menterjemah (Automatic Translation)
 translate-from=Terjemah daripada (Automatic Translation)
 translated=Diterjemahkan (Automatic Translation)
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=Menterjemah (Automatic Translation)
 translating-web-content-to-x=Translating Web Content to {0} (Automatic Copy)
 translation=Penterjemahan (Automatic Translation)
