--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=Current Site Role IDs (Automatic Copy)
 current-step=Bieżący krok (Automatic Translation)
 current-theme=Bieżący motyw
 current-title=Bieżąca tytuł
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=Bieżąca użytkownik
 current-url-help=URL, który zostanie wykorzystany do stworzenia bieżącego zapytania do portalu.
 current-user=Bieżąca użytkownik
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=Wskaż role, które otrzyma nowy uczestnik witryny
 default-template=Domyślny Szablon
 default-template-shorten=Szablon domyślny (skróć) (Automatic Translation)
 default-theme=Domyślny motyw
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=Domyślne przypisania użytkownika
 default-user-password=Domyślne hasło użytkownika (Automatic Translation)
 default-value=Wartość domyślna
@@ -8814,34 +8816,48 @@ language.da=Duński
 language.de=Niemiecki
 language.el=Grecki
 language.en=Angielski
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=Hiszpański
 language.es_AR=Spanish (Argentina) (Automatic Copy)
 language.es_CO=Spanish (Colombia) (Automatic Copy)
 language.es_MX=Spanish (Mexico) (Automatic Copy)
 language.et=Estoński
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=Fiński
 language.fr=Francuski
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=Hinduski
+language.hr=Croatian (Automatic Copy)
 language.ht=Kreolski (Haiti)
 language.hu=Węgierski
 language.in=Indonezyjski
 language.it=Włoski
 language.iw=Hebrajski
 language.ja=Japoński
+language.kk=Kazakh (Automatic Copy)
 language.ko=Koreański
+language.lo=Lao (Automatic Copy)
 language.lt=Litewski
 language.lv=Łotewski
 language.ms=Malajski
 language.mww=Hmong Daw
 language.nb=Norweski
 language.nl=Holenderski
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=Polski
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=Portugalski
 language.ro=Rumuński
 language.ru=Rosyjski
 language.sk=Słowacki
 language.sl=Słoweński
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=Szwedzki
+language.ta=Tamil (Automatic Copy)
 language.th=Taiski
 language.tr=Turecki
 language.uk=Ukraiński
@@ -10901,6 +10917,7 @@ not-staged=Nie staged (Automatic Translation)
 not-started=Nie rozpoczęto (Automatic Translation)
 not-supported=Nie wspierany
 not-translated=Nie przetłumaczono (Automatic Translation)
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=Niewidoczne (Automatic Translation)
 not-x=Not {0}? (Automatic Copy)
 note=Notatka
@@ -12568,6 +12585,7 @@ presentation-settings=Ustawienia prezentacji
 presets=Ustawienia
 press-enter-to-add-x-field=Press enter to add {0} field. (Automatic Copy)
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=Press enter to choose this field set or use arrow keys to navigate through the available field sets. Press escape at any time to close this dialog. (Automatic Copy)
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=Naciśnij klawisz escape, aby usunąć filtry kategorii pręta. (Automatic Translation)
 press-release=Wiadomości prasowe
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Press the button below to obtain your one-time password. It will be sent to {0}. (Automatic Copy)
@@ -17772,6 +17790,7 @@ transitions=Przejścia (Automatic Translation)
 translate=Przetłumacz
 translate-from=Przetłumacz z (Automatic Translation)
 translated=Przetłumaczony (Automatic Translation)
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=Tłumaczenie (Automatic Translation)
 translating-web-content-to-x=Tłumaczenie zawartości stron na {0}
 translation=Tłumacz
