--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=Current Site Role IDs (Automatic Copy)
 current-step=Geçerli Adım (Automatic Translation)
 current-theme=Güncel Tema
 current-title=Güncel Başlık
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=Güncel Kullanıcı
 current-url-help=Portala geçerli isteği yapmak için kullanılan URL'yi temsil eder. (Automatic Translation)
 current-user=Güncel Kullanıcı
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=Yeni atanan site üyelerinin üyesi olduğu takım
 default-template=Varsayılan Şablon (Automatic Translation)
 default-template-shorten=Varsayılan Şablon (Kısalt) (Automatic Translation)
 default-theme=Varsayılan Tema (Automatic Translation)
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=Varsayılan Kullanıcı İlişkileri
 default-user-password=Varsayılan Kullanıcı Parolası (Automatic Translation)
 default-value=Varsayılan Değer
@@ -8814,34 +8816,48 @@ language.da=Danimarkaca
 language.de=Almanca
 language.el=Yunanca
 language.en=İngilizce
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=İspanyolca
 language.es_AR=Spanish (Argentina) (Automatic Copy)
 language.es_CO=Spanish (Colombia) (Automatic Copy)
 language.es_MX=Spanish (Mexico) (Automatic Copy)
 language.et=Estonca
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=Fince
 language.fr=Fransız
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=Hintçe
+language.hr=Croatian (Automatic Copy)
 language.ht=Haitice
 language.hu=Macar Dili
 language.in=Endonezya dili
 language.it=İtalyanca
 language.iw=İbranice
 language.ja=Japonca
+language.kk=Kazakh (Automatic Copy)
 language.ko=Korece
+language.lo=Lao (Automatic Copy)
 language.lt=Litvanca
 language.lv=Letonca
 language.ms=Malay dili
 language.mww=Hmong Daw
 language.nb=Norveçce
 language.nl=Hollandaca
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=Polonyalı
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=Portekiz
 language.ro=Romanyalı
 language.ru=Rusça
 language.sk=Slovakça
 language.sl=Slovakça
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=İsveççe
+language.ta=Tamil (Automatic Copy)
 language.th=Tay dili
 language.tr=Türkçe
 language.uk=Ukraynalı
@@ -10901,6 +10917,7 @@ not-staged=Sahnelenemedi (Automatic Translation)
 not-started=Başlatılmadı (Automatic Translation)
 not-supported=Desteklenmiyor
 not-translated=Çevrilmedi (Automatic Translation)
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=Görünür Değil (Automatic Translation)
 not-x=Not {0}? (Automatic Copy)
 note=Not
@@ -12568,6 +12585,7 @@ presentation-settings=Sunum Ayarları
 presets=Önayarlar
 press-enter-to-add-x-field=Press enter to add {0} field. (Automatic Copy)
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=Press enter to choose this field set or use arrow keys to navigate through the available field sets. Press escape at any time to close this dialog. (Automatic Copy)
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=Çubuğun kategori filtrelerini kaldırmak için escape tuşuna basın. (Automatic Translation)
 press-release=Basın açıklamaları / 'Bırak'a basın Press Release
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Press the button below to obtain your one-time password. It will be sent to {0}. (Automatic Copy)
@@ -17772,6 +17790,7 @@ transitions=Geçiş (Automatic Translation)
 translate=Çevir
 translate-from=Çeviri kaynağı (Automatic Translation)
 translated=Çevrilmiş (Automatic Translation)
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=Çevriliyor (Automatic Translation)
 translating-web-content-to-x=Translating Web Content to {0} (Automatic Copy)
 translation=Çeviri
