--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=Current Site Role IDs (Automatic Copy)
 current-step=Bước Hiện tại (Automatic Translation)
 current-theme=Mẫu giao diện đang áp dụng
 current-title=Tiêu đề hiện tại
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language. (Automatic Copy)
 current-url=Người dùng hiện tại
 current-url-help=Liên kết (URL) được sử dụng để truy nhập đến Cổng TTĐT.
 current-user=Người dùng hiện tại
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=Chọn vai trò thiết lập cho thành viên tra
 default-template=Mẫu Mặc định (Automatic Translation)
 default-template-shorten=Mẫu Mặc định (Rút ngắn) (Automatic Translation)
 default-theme=Giao diện mặc định
+default-translation-is-x=Default translation is {0}. (Automatic Copy)
 default-user-associations=Quyền người dùng mặc định
 default-user-password=Mật khẩu Người dùng Mặc định (Automatic Translation)
 default-value=Giá trị mặc định
@@ -8814,34 +8816,48 @@ language.da=Đan Mạch
 language.de=Tiếng Đức
 language.el=Hy Lạp
 language.en=Tiếng Anh
+language.en_AU=English (Australia) (Automatic Copy)
+language.en_GB=English (England) (Automatic Copy)
 language.es=Tiếng Tây Ban Nha
 language.es_AR=Spanish (Argentina) (Automatic Copy)
 language.es_CO=Spanish (Colombia) (Automatic Copy)
 language.es_MX=Spanish (Mexico) (Automatic Copy)
 language.et=Tiếng Estonia
+language.eu=Basque (Automatic Copy)
+language.fa=Persian (Automatic Copy)
 language.fi=Phần Lan
 language.fr=Nước Pháp
+language.fr_CA=French (Canada) (Automatic Copy)
+language.gl=Galician (Automatic Copy)
 language.hi_IN=Tiếng Hin-ddi
+language.hr=Croatian (Automatic Copy)
 language.ht=Tiếng Haiti Creole
 language.hu=Hung ga ri
 language.in=Indonesia
 language.it=Tiếng Ý
 language.iw=Tiếng Hebrew
 language.ja=Nhật bản
+language.kk=Kazakh (Automatic Copy)
 language.ko=Tiếng Hàn Quốc
+language.lo=Lao (Automatic Copy)
 language.lt=Lithuanian
 language.lv=Tiếng Latvia
 language.ms=Malay
 language.mww=H'Mông Daw
 language.nb=Tiếng Na Uy
 language.nl=Tiếng Hà Lan
+language.nl_BE=Dutch (Belgium) (Automatic Copy)
 language.pl=Tiếng Ba Lan
+language.pt_BR=Portuguese (Brazil) (Automatic Copy)
 language.pt_PT=Tiếng Bồ Đào Nha
 language.ro=Tiếng Ru-ma-ni
 language.ru=Tiếng Nga
 language.sk=Tiếng Slo-va-ki-a
 language.sl=Tiếng Slo-va-ki-a
+language.sr_RS=Serbian (Automatic Copy)
+language.sr_RS_latin=Serbian Latinica (Automatic Copy)
 language.sv=Tiền Thụy Điển
+language.ta=Tamil (Automatic Copy)
 language.th=Thái
 language.tr=Tiếng Thổ Nhĩ Kỳ
 language.uk=Tiếng Uc-rai-na
@@ -10901,6 +10917,7 @@ not-staged=Chưa được Trình diễn (stage)
 not-started=Chưa bắt đầu (Automatic Translation)
 not-supported=Không hỗ trợ
 not-translated=Chưa dịch (Automatic Translation)
+not-translated-into-x=Not translated into {0}. (Automatic Copy)
 not-visible=Chưa hiển thị
 not-x=Not {0}? (Automatic Copy)
 note=Lưu ý
@@ -12568,6 +12585,7 @@ presentation-settings=Thiết lập hiện tại
 presets=Cài đặt sẵn
 press-enter-to-add-x-field=Press enter to add {0} field. (Automatic Copy)
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=Press enter to choose this field set or use arrow keys to navigate through the available field sets. Press escape at any time to close this dialog. (Automatic Copy)
+press-enter-to-edit-x-translation=Press enter to edit {0} translation. (Automatic Copy)
 press-escape-to-remove-the-bar's-category-filters=Nhấn escape để loại bỏ các bộ lọc danh mục của thanh. (Automatic Translation)
 press-release=Thông cáo báo chí
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Press the button below to obtain your one-time password. It will be sent to {0}. (Automatic Copy)
@@ -17772,6 +17790,7 @@ transitions=Transitions (Automatic Translation)
 translate=Dịch
 translate-from=Dịch từ (Automatic Translation)
 translated=Dịch (Automatic Translation)
+translated-into-x=Translated into {0}. (Automatic Copy)
 translating=Dịch (Automatic Translation)
 translating-web-content-to-x=Đang dịch nội dung web tới {0}
 translation=Biên dịch
